--- a/ebooks/poetry/tangshi_300.html
+++ b/ebooks/poetry/tangshi_300.html
@@ -1,5 +1,8 @@
-<html><meta http-equiv="Content-Type" content="text/html" charset="gb2312"><BODY BGCOLOR="#FFF4E4">
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html" charset="gb2312"><BODY BGCOLOR="#FFF4E4">
 <title>唐诗三百首</title>
+</head>
 <center><h2>唐诗三百首</h2></center>
 <p>
 　　此电子版本乃由Ned Walsh于一九九二年春陆续输入。当时他是美国Columbia大学的博士
