--- a/ebooks/poetry/shiliuqianshuo.html
+++ b/ebooks/poetry/shiliuqianshuo.html
@@ -1,4 +1,4 @@
-<html><meta http-equiv="Content-Type" content="text/html" charset="utf-8"><BODY BGCOLOR="#FFF4E4"><TITLE></TITLE>
+<html><meta http-equiv="Content-Type" content="text/html" charset="gb2312"><BODY BGCOLOR="#FFF4E4"><TITLE></TITLE>
 <CENTER><h2>й╚бигЁк╣</h2></CENTER><p>
 
 <hr size=3><p>
