--- a/ebooks/poetry/tangshi_300.html
+++ b/ebooks/poetry/tangshi_300.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta charset="gb2312">
 <meta http-equiv="Content-Type" content="text/html" charset="gb2312"><BODY BGCOLOR="#FFF4E4">
 <title>唐诗三百首</title>
 </head>
