--- a/ebooks/poetry/test.html
+++ b/ebooks/poetry/test.html
@@ -4,6 +4,9 @@
 <center><h2>中文</h2></center>
 
 <p>
+最近强迫症越来越严重了，越来越注重事情的完美性和对称性，就好比刚才，开玩笑被
+同事在大腿上狠狠的拧了一把，追没追上她，自己在没人的角落里狠狠的在另一条腿上
+拧了一把，哇哈哈…心情一下子舒畅了！
 </p>
 
 </body></html>
