--- a/ebooks/prose/short_pop/u001.html
+++ b/ebooks/prose/short_pop/u001.html
@@ -1,7 +1,7 @@
 <html><meta http-equiv="Content-Type" content="text/html" charset="gb2312"><BODY BGCOLOR="#FFF4E4">
 
 
-<title>¹«ËïÁú×Ó</title>
+<title>å…¬å­™é¾™å­</title>
 
 <script language="javascript" src="/skimg.js">
 </script>
@@ -22,223 +22,223 @@ initializeimg();
 
 
 <p>
-¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡  ¹«ËïÁú×Ó
+ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€  å…¬å­™é¾™å­
 
 
 <p>
-¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡  ¼£¸®µÚÒ»
+ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€  è¿¹åºœç¬¬ä¸€
 
 
 <p>
-¡¡¡¡¹«ËïÁú£¬Áù¹úÊ±±çÊ¿Ò²¡£¼²ÃûÊµÖ®É¢ÂÒ£¬Òò×Ê²ÄÖ®Ëù³¤£¬Îª¡°ÊØ°×¡±Ö®ÂÛ¡£
+ã€€ã€€å…¬å­™é¾™ï¼Œå…­å›½æ—¶è¾©å£«ä¹Ÿã€‚ç–¾åå®žä¹‹æ•£ä¹±ï¼Œå› èµ„æä¹‹æ‰€é•¿ï¼Œä¸ºâ€œå®ˆç™½â€ä¹‹è®ºã€‚
 
-¼ÙÎïÈ¡Æ©£¬ÒÔ¡°ÊØ°×¡±±ç£¬Î½°×ÂíÎª·ÇÂíÒ²¡£°×ÂíÎª·ÇÂíÕß£¬ÑÔ°×ËùÒÔÃûÉ«£¬ÑÔ
+å‡ç‰©å–è­¬ï¼Œä»¥â€œå®ˆç™½â€è¾©ï¼Œè°“ç™½é©¬ä¸ºéžé©¬ä¹Ÿã€‚ç™½é©¬ä¸ºéžé©¬è€…ï¼Œè¨€ç™½æ‰€ä»¥åè‰²ï¼Œè¨€
 
-ÂíËùÒÔÃûÐÎÒ²£»É«·ÇÐÎ£¬ÐÎ·ÇÉ«Ò²¡£·òÑÔÉ«ÔòÐÎ²»µ±Óë£¬ÑÔÐÎÔòÉ«²»ÒË´Ó£¬½ñºÏ
+é©¬æ‰€ä»¥åå½¢ä¹Ÿï¼›è‰²éžå½¢ï¼Œå½¢éžè‰²ä¹Ÿã€‚å¤«è¨€è‰²åˆ™å½¢ä¸å½“ä¸Žï¼Œè¨€å½¢åˆ™è‰²ä¸å®œä»Žï¼Œä»Šåˆ
 
-ÒÔÎªÎï£¬·ÇÒ²¡£ÈçÇó°×ÂíÓÚ¾ÇÖÐ£¬ÎÞÓÐ£¬¶øÓÐæêÉ«Ö®Âí£¬È»²»¿ÉÒÔÓ¦ÓÐ°×ÂíÒ²¡£
+ä»¥ä¸ºç‰©ï¼Œéžä¹Ÿã€‚å¦‚æ±‚ç™½é©¬äºŽåŽ©ä¸­ï¼Œæ— æœ‰ï¼Œè€Œæœ‰éªŠè‰²ä¹‹é©¬ï¼Œç„¶ä¸å¯ä»¥åº”æœ‰ç™½é©¬ä¹Ÿã€‚
 
-²»¿ÉÒÔÓ¦ÓÐ°×Âí£¬ÔòËùÇóÖ®ÂíÍöÒÓ£»ÍöÔò°×Âí¾¹·ÇÂí¡£ÓûÍÆÊÇ±ç£¬ÒÔÕýÃûÊµ¶ø»¯
+ä¸å¯ä»¥åº”æœ‰ç™½é©¬ï¼Œåˆ™æ‰€æ±‚ä¹‹é©¬äº¡çŸ£ï¼›äº¡åˆ™ç™½é©¬ç«Ÿéžé©¬ã€‚æ¬²æŽ¨æ˜¯è¾©ï¼Œä»¥æ­£åå®žè€ŒåŒ–
 
-ÌìÏÂÑÉ¡£
+å¤©ä¸‹ç„‰ã€‚
 <p>
-¡¡¡¡ÁúÓÚ¿×´©»áÕÔÆ½Ô­¾ý¼Ò¡£´©Ô»£º¡°ËØÎÅÏÈÉú¸ßÒê£¬Ô¸ÎªµÜ×Ó¾Ã£¬µ«²»È¡ÏÈÉú
+ã€€ã€€é¾™äºŽå­”ç©¿ä¼šèµµå¹³åŽŸå›å®¶ã€‚ç©¿æ›°ï¼šâ€œç´ é—»å…ˆç”Ÿé«˜è°Šï¼Œæ„¿ä¸ºå¼Ÿå­ä¹…ï¼Œä½†ä¸å–å…ˆç”Ÿ
 
-ÒÔ°×ÂíÎª·ÇÂí¶ú£¡ÇéÈ¥´ËÊõ£¬Ôò´©ÇëÎªµÜ×Ó¡£¡±
+ä»¥ç™½é©¬ä¸ºéžé©¬è€³ï¼æƒ…åŽ»æ­¤æœ¯ï¼Œåˆ™ç©¿è¯·ä¸ºå¼Ÿå­ã€‚â€
 <p>
-¡¡¡¡ÁúÔ»£º¡°ÏÈÉúÖ®ÑÔã£¡£ÁúÖ®ËùÒÔÎªÃûÕß£¬ÄËÒÔ°×ÂíÖ®ÂÛ¶û£¡½ñÊ¹ÁúÈ¥Ö®£¬Ôò
+ã€€ã€€é¾™æ›°ï¼šâ€œå…ˆç”Ÿä¹‹è¨€æ‚–ã€‚é¾™ä¹‹æ‰€ä»¥ä¸ºåè€…ï¼Œä¹ƒä»¥ç™½é©¬ä¹‹è®ºå°”ï¼ä»Šä½¿é¾™åŽ»ä¹‹ï¼Œåˆ™
 
-ÎÞÒÔ½ÌÑÉ¡£ÇÒÓûÊ¦Ö®Õß£¬ÒÔÖÇÓëÑ§²»ÈçÒ²¡£½ñÊ¹ÁúÈ¥Ö®£¬´ËÏÈ½Ì¶øºóÊ¦Ò²£»ÏÈ½Ì
+æ— ä»¥æ•™ç„‰ã€‚ä¸”æ¬²å¸ˆä¹‹è€…ï¼Œä»¥æ™ºä¸Žå­¦ä¸å¦‚ä¹Ÿã€‚ä»Šä½¿é¾™åŽ»ä¹‹ï¼Œæ­¤å…ˆæ•™è€ŒåŽå¸ˆä¹Ÿï¼›å…ˆæ•™
 
-¶øºóÊ¦Ö®Õß£¬ã£¡£
+è€ŒåŽå¸ˆä¹‹è€…ï¼Œæ‚–ã€‚
 <p>
-¡¡¡¡¡°ÇÒ°×Âí·ÇÂí£¬ÄËÖÙÄáÖ®ËùÈ¡¡£ÁúÎÅ³þÍõÕÅ·±ÈõÖ®¹­£¬ÔØÍö¹éÖ®Ê¸£¬ÒÔÉäòÔ
+ã€€ã€€â€œä¸”ç™½é©¬éžé©¬ï¼Œä¹ƒä»²å°¼ä¹‹æ‰€å–ã€‚é¾™é—»æ¥šçŽ‹å¼ ç¹å¼±ä¹‹å¼“ï¼Œè½½äº¡å½’ä¹‹çŸ¢ï¼Œä»¥å°„è›Ÿ
 
-¿ÚÓÚÔÆÃÎÖ®ÆÔ£¬¶øÉ¥Æä¹­¡£×óÓÒÇëÇóÖ®¡£ÍõÔ»£º¡®Ö¹¡£³þÈËÒÅ¹­£¬³þÈËµÃÖ®£¬ÓÖ
+å£äºŽäº‘æ¢¦ä¹‹åœƒï¼Œè€Œä¸§å…¶å¼“ã€‚å·¦å³è¯·æ±‚ä¹‹ã€‚çŽ‹æ›°ï¼šâ€˜æ­¢ã€‚æ¥šäººé—å¼“ï¼Œæ¥šäººå¾—ä¹‹ï¼Œåˆ
 
-ºÎÇóºõ£¿¡¯ÖÙÄáÎÅÖ®Ô»£º¡®³þÍõÈÊÒå¶øÎ´ËìÒ²¡£ÒàÔ»ÈËÍö¹­£¬ÈËµÃÖ®¶øÒÑ£¬ºÎ±Ø
+ä½•æ±‚ä¹Žï¼Ÿâ€™ä»²å°¼é—»ä¹‹æ›°ï¼šâ€˜æ¥šçŽ‹ä»ä¹‰è€Œæœªé‚ä¹Ÿã€‚äº¦æ›°äººäº¡å¼“ï¼Œäººå¾—ä¹‹è€Œå·²ï¼Œä½•å¿…
 
-³þ£¿¡¯Èô´Ë£¬ÖÙÄáÒì¡®³þÈË¡¯ÓëËùÎ½¡®ÈË¡¯¡£·òÊÇÖÙÄáÒì¡®³þÈË¡¯ÓëËùÎ½¡®ÈË¡¯£¬
+æ¥šï¼Ÿâ€™è‹¥æ­¤ï¼Œä»²å°¼å¼‚â€˜æ¥šäººâ€™ä¸Žæ‰€è°“â€˜äººâ€™ã€‚å¤«æ˜¯ä»²å°¼å¼‚â€˜æ¥šäººâ€™ä¸Žæ‰€è°“â€˜äººâ€™ï¼Œ
 
-¶ø·ÇÁú¡®°×Âí¡¯ÓÚËùÎ½¡®Âí¡¯£¬ã£¡£¡±
+è€Œéžé¾™â€˜ç™½é©¬â€™äºŽæ‰€è°“â€˜é©¬â€™ï¼Œæ‚–ã€‚â€
 <p>
-¡¡¡¡¡°ÏÈÉúÐÞÈåÊõ¶ø·ÇÖÙÄáÖ®ËùÈ¡£¬ÓûÑ§¶øÊ¹ÁúÈ¥Ëù½Ì£¬ÔòËä°ÙÁú£¬¹Ì²»ÄÜµ±Ç°
+ã€€ã€€â€œå…ˆç”Ÿä¿®å„’æœ¯è€Œéžä»²å°¼ä¹‹æ‰€å–ï¼Œæ¬²å­¦è€Œä½¿é¾™åŽ»æ‰€æ•™ï¼Œåˆ™è™½ç™¾é¾™ï¼Œå›ºä¸èƒ½å½“å‰
 
-ÒÓ¡£¡±¿×´©ÎÞÒÔÓ¦ÑÉ¡£
+çŸ£ã€‚â€å­”ç©¿æ— ä»¥åº”ç„‰ã€‚
 <p>
-¡¡¡¡¹«ËïÁú£¬ÕÔÆ½Ô­¾ýÖ®¿ÍÒ²£»¿×´©£¬¿××ÓÖ®Ò¶Ò²¡£´©ÓëÁú»á¡£´©Î½ÁúÔ»£º¡°³¼
+ã€€ã€€å…¬å­™é¾™ï¼Œèµµå¹³åŽŸå›ä¹‹å®¢ä¹Ÿï¼›å­”ç©¿ï¼Œå­”å­ä¹‹å¶ä¹Ÿã€‚ç©¿ä¸Žé¾™ä¼šã€‚ç©¿è°“é¾™æ›°ï¼šâ€œè‡£
 
-¾ÓÂ³£¬²àÎÅÏÂ·ç£¬¸ßÏÈÉúÖ®ÖÇ£¬ËµÏÈÉúÖ®ÐÐ£¬Ô¸ÊÜÒæÖ®ÈÕ¾ÃÒÓ£¬ÄË½ñµÃ¼û¡£È»Ëù
+å±…é²ï¼Œä¾§é—»ä¸‹é£Žï¼Œé«˜å…ˆç”Ÿä¹‹æ™ºï¼Œè¯´å…ˆç”Ÿä¹‹è¡Œï¼Œæ„¿å—ç›Šä¹‹æ—¥ä¹…çŸ£ï¼Œä¹ƒä»Šå¾—è§ã€‚ç„¶æ‰€
 
-²»È¡ÏÈÉúÕß£¬¶À²»È¡ÏÈÉúÖ®ÒÔ°×ÂíÎª·ÇÂí¶ú¡£ÇëÈ¥°×Âí·ÇÂíÖ®Ñ§£¬´©ÇëÎªµÜ×Ó¡£¡±
+ä¸å–å…ˆç”Ÿè€…ï¼Œç‹¬ä¸å–å…ˆç”Ÿä¹‹ä»¥ç™½é©¬ä¸ºéžé©¬è€³ã€‚è¯·åŽ»ç™½é©¬éžé©¬ä¹‹å­¦ï¼Œç©¿è¯·ä¸ºå¼Ÿå­ã€‚â€
 <p>
-¡¡¡¡¹«ËïÁúÔ»£º¡°ÏÈÉúÖ®ÑÔã£¡£ÁúÖ®Ñ§£¬ÒÔ°×ÂíÎª·ÇÂíÕßÒ²¡£Ê¹ÁúÈ¥Ö®£¬ÔòÁúÎÞ
+ã€€ã€€å…¬å­™é¾™æ›°ï¼šâ€œå…ˆç”Ÿä¹‹è¨€æ‚–ã€‚é¾™ä¹‹å­¦ï¼Œä»¥ç™½é©¬ä¸ºéžé©¬è€…ä¹Ÿã€‚ä½¿é¾™åŽ»ä¹‹ï¼Œåˆ™é¾™æ— 
 
-ÒÔ½Ì£»ÎÞÒÔ½Ì¶øÄËÑ§ÓÚÁúÒ²Õß£¬ã£¡£ÇÒ·òÓûÑ§ÓÚÁúÕß£¬ÒÔÖÇÓëÑ§ÑÉÎª²»´þÒ²¡£½ñ
+ä»¥æ•™ï¼›æ— ä»¥æ•™è€Œä¹ƒå­¦äºŽé¾™ä¹Ÿè€…ï¼Œæ‚–ã€‚ä¸”å¤«æ¬²å­¦äºŽé¾™è€…ï¼Œä»¥æ™ºä¸Žå­¦ç„‰ä¸ºä¸é€®ä¹Ÿã€‚ä»Š
 
-½ÌÁúÈ¥°×Âí·ÇÂí£¬ÊÇÏÈ½Ì¶øºóÊ¦Ö®Ò²£»ÏÈ½Ì¶øºóÊ¦Ö®£¬²»¿É¡£¡±
+æ•™é¾™åŽ»ç™½é©¬éžé©¬ï¼Œæ˜¯å…ˆæ•™è€ŒåŽå¸ˆä¹‹ä¹Ÿï¼›å…ˆæ•™è€ŒåŽå¸ˆä¹‹ï¼Œä¸å¯ã€‚â€
 <p>
-¡¡¡¡¡°ÏÈÉúÖ®ËùÒÔ½ÌÁúÕß£¬ËÆÆëÍõÖ®Î½ÒüÎÄÒ²¡£ÆëÍõÖ®Î½ÒüÎÄÔ»£º¡®¹ÑÈËÉõºÃÊ¿£¬
+ã€€ã€€â€œå…ˆç”Ÿä¹‹æ‰€ä»¥æ•™é¾™è€…ï¼Œä¼¼é½çŽ‹ä¹‹è°“å°¹æ–‡ä¹Ÿã€‚é½çŽ‹ä¹‹è°“å°¹æ–‡æ›°ï¼šâ€˜å¯¡äººç”šå¥½å£«ï¼Œ
 
-ÒÔÆë¹úÎÞÊ¿£¬ºÎÒ²£¿¡¯ÒüÎÄÔ»£º¡®Ô¸ÎÅ´óÍõÖ®ËùÎ½Ê¿Õß¡£¡¯ÆëÍõÎÞÒÔÓ¦¡£ÒüÎÄÔ»£º
+ä»¥é½å›½æ— å£«ï¼Œä½•ä¹Ÿï¼Ÿâ€™å°¹æ–‡æ›°ï¼šâ€˜æ„¿é—»å¤§çŽ‹ä¹‹æ‰€è°“å£«è€…ã€‚â€™é½çŽ‹æ— ä»¥åº”ã€‚å°¹æ–‡æ›°ï¼š
 
-¡®½ñÓÐÈËÓÚ´Ë£¬ÊÂ¾ýÔòÖÒ£¬ÊÂÇ×ÔòÐ¢£¬½»ÓÑÔòÐÅ£¬´¦ÏçÔòË³£¬ÓÐ´ËËÄÐÐ£¬¿ÉÎ½Ê¿
+â€˜ä»Šæœ‰äººäºŽæ­¤ï¼Œäº‹å›åˆ™å¿ ï¼Œäº‹äº²åˆ™å­ï¼Œäº¤å‹åˆ™ä¿¡ï¼Œå¤„ä¹¡åˆ™é¡ºï¼Œæœ‰æ­¤å››è¡Œï¼Œå¯è°“å£«
 
-ºõ£¿¡¯ÆëÍõÔ»£º¡®ÉÆ£¡´ËÕæÎáËùÎ½Ê¿Ò²¡£¡¯ÒüÎÄÔ»£º¡®ÍõµÃ´ËÈË£¬¿ÏÒÔÎª³¼ºõ£¿¡¯
+ä¹Žï¼Ÿâ€™é½çŽ‹æ›°ï¼šâ€˜å–„ï¼æ­¤çœŸå¾æ‰€è°“å£«ä¹Ÿã€‚â€™å°¹æ–‡æ›°ï¼šâ€˜çŽ‹å¾—æ­¤äººï¼Œè‚¯ä»¥ä¸ºè‡£ä¹Žï¼Ÿâ€™
 
-ÍõÔ»£º¡®ËùÔ¸¶ø²»¿ÉµÃÒ²¡£¡¯¡±
+çŽ‹æ›°ï¼šâ€˜æ‰€æ„¿è€Œä¸å¯å¾—ä¹Ÿã€‚â€™â€
 <p>
-¡¡¡¡¡°ÊÇÊ±ÆëÍõºÃÓÂ¡£ÓÚÊÇÒüÎÄÔ»£º¡®Ê¹´ËÈË¹ãÖÚ´óÍ¥Ö®ÖÐ£¬¼ûÇÖÎê¶øÖÕ²»¸Ò¶·£¬
+ã€€ã€€â€œæ˜¯æ—¶é½çŽ‹å¥½å‹‡ã€‚äºŽæ˜¯å°¹æ–‡æ›°ï¼šâ€˜ä½¿æ­¤äººå¹¿ä¼—å¤§åº­ä¹‹ä¸­ï¼Œè§ä¾µä¾®è€Œç»ˆä¸æ•¢æ–—ï¼Œ
 
-Íõ½«ÒÔÎª³¼ºõ£¿¡¯ÍõÔ»£º¡®îÒÊ¿Ò²£¿¼ûÎê¶ø²»¶·£¬ÈèÒ²£¡ÈèÔò¹ÑÈË²»ÒÔÎª³¼ÒÓ¡£¡¯
+çŽ‹å°†ä»¥ä¸ºè‡£ä¹Žï¼Ÿâ€™çŽ‹æ›°ï¼šâ€˜é’œå£«ä¹Ÿï¼Ÿè§ä¾®è€Œä¸æ–—ï¼Œè¾±ä¹Ÿï¼è¾±åˆ™å¯¡äººä¸ä»¥ä¸ºè‡£çŸ£ã€‚â€™
 
-ÒüÎÄÔ»£º¡®Î¨¼ûÎê¶ø²»¶·£¬Î´Ê§ÆäËÄÐÐÒ²¡£ÊÇÈËÊ§ÆäËÄÐÐ£¬ÆäËùÒÔÎªÊ¿Ò²È»¡£¶ø
+å°¹æ–‡æ›°ï¼šâ€˜å”¯è§ä¾®è€Œä¸æ–—ï¼Œæœªå¤±å…¶å››è¡Œä¹Ÿã€‚æ˜¯äººå¤±å…¶å››è¡Œï¼Œå…¶æ‰€ä»¥ä¸ºå£«ä¹Ÿç„¶ã€‚è€Œ
 
-ÍõÒ»ÒÔÎª³¼£¬Ò»²»ÒÔÎª³¼£¬ÔòÏòÖ®ËùÎ½Ê¿Õß£¬ÄË·ÇÊ¿ºõ£¿¡¯ÆëÍõÎÞÒÔÓ¦¡£¡±
+çŽ‹ä¸€ä»¥ä¸ºè‡£ï¼Œä¸€ä¸ä»¥ä¸ºè‡£ï¼Œåˆ™å‘ä¹‹æ‰€è°“å£«è€…ï¼Œä¹ƒéžå£«ä¹Žï¼Ÿâ€™é½çŽ‹æ— ä»¥åº”ã€‚â€
 <p>
-¡¡¡¡¡°ÒüÎÄÔ»£º¡®½ñÓÐÈË¾ý£¬½«ÀíÆä¹ú£¬ÈËÓÐ·ÇÔò·ÇÖ®£¬ÎÞ·ÇÔòÒà·ÇÖ®£»ÓÐ¹¦Ôò
+ã€€ã€€â€œå°¹æ–‡æ›°ï¼šâ€˜ä»Šæœ‰äººå›ï¼Œå°†ç†å…¶å›½ï¼Œäººæœ‰éžåˆ™éžä¹‹ï¼Œæ— éžåˆ™äº¦éžä¹‹ï¼›æœ‰åŠŸåˆ™
 
-ÉÍÖ®£¬ÎÞ¹¦ÔòÒàÉÍÖ®£¬¶øÔ¹ÈËÖ®²»ÀíÒ²£¬¿Éºõ£¿¡¯ÆëÍõÔ»£º¡®²»¿É¡£¡¯ÒüÎÄÔ»£º
+èµä¹‹ï¼Œæ— åŠŸåˆ™äº¦èµä¹‹ï¼Œè€Œæ€¨äººä¹‹ä¸ç†ä¹Ÿï¼Œå¯ä¹Žï¼Ÿâ€™é½çŽ‹æ›°ï¼šâ€˜ä¸å¯ã€‚â€™å°¹æ–‡æ›°ï¼š
 
-¡®³¼¿Ú¹ÛÏÂÀôÖ®ÀíÆë£¬Æë·½Èô´ËÒÓ¡£¡¯ÍõÔ»£º¡®¹ÑÈËÀí¹ú£¬ÐÅÈôÏÈÉúÖ®ÑÌ£¬ÈËËä
+â€˜è‡£å£è§‚ä¸‹åä¹‹ç†é½ï¼Œé½æ–¹è‹¥æ­¤çŸ£ã€‚â€™çŽ‹æ›°ï¼šâ€˜å¯¡äººç†å›½ï¼Œä¿¡è‹¥å…ˆç”Ÿä¹‹çƒŸï¼Œäººè™½
 
-²»Àí£¬¹ÑÈË²»¸ÒÔ¹Ò²¡£ÒâÎ´ÖÁÈ»Óë£¿¡¯
+ä¸ç†ï¼Œå¯¡äººä¸æ•¢æ€¨ä¹Ÿã€‚æ„æœªè‡³ç„¶ä¸Žï¼Ÿâ€™
 <p>
-¡¡¡¡¡°ÒüÎÄÔ»£º¡®ÑÔÖ®¸ÒÎÞËµºõ£¿ÍõÖ®ÁîÔ»£º¡®É±ÈËÕßËÀ£¬ÉËÈËÕßÐÌ¡£¡¯ÈËÓÐÎ·
+ã€€ã€€â€œå°¹æ–‡æ›°ï¼šâ€˜è¨€ä¹‹æ•¢æ— è¯´ä¹Žï¼ŸçŽ‹ä¹‹ä»¤æ›°ï¼šâ€˜æ€äººè€…æ­»ï¼Œä¼¤äººè€…åˆ‘ã€‚â€™äººæœ‰ç•
 
-ÍõÖ®ÁîÕß£¬¼ûÎê¶øÖÕ²»¸Ò¶·£¬ÊÇÈ«ÍõÖ®ÁîÒ²¡£¶øÍõÔ»£º¡®¼ûÎê¶ø²»¶·Õß£¬ÈèÒ²¡£
+çŽ‹ä¹‹ä»¤è€…ï¼Œè§ä¾®è€Œç»ˆä¸æ•¢æ–—ï¼Œæ˜¯å…¨çŽ‹ä¹‹ä»¤ä¹Ÿã€‚è€ŒçŽ‹æ›°ï¼šâ€˜è§ä¾®è€Œä¸æ–—è€…ï¼Œè¾±ä¹Ÿã€‚
 
-¡¯Î½Ö®Èè£¬·ÇÖ®Ò²¡£ÎÞ·Ç¶øÍõ·ÇÖ®£¬¹ÊÒò³ýÆä¼®£¬²»ÒÔÎª³¼Ò²¡£²»ÒÔÎª³¼Õß£¬·£
+â€™è°“ä¹‹è¾±ï¼Œéžä¹‹ä¹Ÿã€‚æ— éžè€ŒçŽ‹éžä¹‹ï¼Œæ•…å› é™¤å…¶ç±ï¼Œä¸ä»¥ä¸ºè‡£ä¹Ÿã€‚ä¸ä»¥ä¸ºè‡£è€…ï¼Œç½š
 
-Ö®Ò²¡£´ËÎÞ¶øÍõ·£Ö®Ò²¡£ÇÒÍõÈè²»¸Ò¶·Õß£¬±ØÈÙ¸Ò¶·ÕßÒ²£»ÈÙ¸Ò¶·Õß£¬ÊÇ¶øÍõÊÇ
+ä¹‹ä¹Ÿã€‚æ­¤æ— è€ŒçŽ‹ç½šä¹‹ä¹Ÿã€‚ä¸”çŽ‹è¾±ä¸æ•¢æ–—è€…ï¼Œå¿…è£æ•¢æ–—è€…ä¹Ÿï¼›è£æ•¢æ–—è€…ï¼Œæ˜¯è€ŒçŽ‹æ˜¯
 
-Ö®£¬±ØÒÔÎª³¼ÒÓ¡£±ØÒÔÎª³¼Õß£¬ÉÍÖ®Ò²¡£±ËÎÞ¹¦¶øÍõÉÍÖ®¡£ÍõÖ®ËùÉÍ£¬ÀôÖ®ËùÖï
+ä¹‹ï¼Œå¿…ä»¥ä¸ºè‡£çŸ£ã€‚å¿…ä»¥ä¸ºè‡£è€…ï¼Œèµä¹‹ä¹Ÿã€‚å½¼æ— åŠŸè€ŒçŽ‹èµä¹‹ã€‚çŽ‹ä¹‹æ‰€èµï¼Œåä¹‹æ‰€è¯›
 
-Ò²£»ÉÏÖ®ËùÊÇ£¬¶ø·¨Ö®Ëù·ÇÒ²¡£ÉÍ·£ÊÇ·Ç£¬ÏàÓëËÄÃý£¬ËäÊ®»ÆµÛ£¬²»ÄÜÀíÒ²¡£¡¯
+ä¹Ÿï¼›ä¸Šä¹‹æ‰€æ˜¯ï¼Œè€Œæ³•ä¹‹æ‰€éžä¹Ÿã€‚èµç½šæ˜¯éžï¼Œç›¸ä¸Žå››è°¬ï¼Œè™½åé»„å¸ï¼Œä¸èƒ½ç†ä¹Ÿã€‚â€™
 
-ÆëÍõÎÞÒÔÓ¦¡£¡±
+é½çŽ‹æ— ä»¥åº”ã€‚â€
 <p>
-¡¡¡¡¡°¹ÊÁúÒÔ×ÓÖ®ÑÔÓÐËÆÆëÍõ¡£×ÓÖªÄÑ°×ÂíÖ®·ÇÂí£¬²»ÖªËùÒÔÄÑÖ®Ëµ£¬ÒÔ´Ë£¬ÓÌ
+ã€€ã€€â€œæ•…é¾™ä»¥å­ä¹‹è¨€æœ‰ä¼¼é½çŽ‹ã€‚å­çŸ¥éš¾ç™½é©¬ä¹‹éžé©¬ï¼Œä¸çŸ¥æ‰€ä»¥éš¾ä¹‹è¯´ï¼Œä»¥æ­¤ï¼ŒçŠ¹
 
-ºÃÊ¿Ö®Ãû£¬¶ø²»Öª²ìÊ¿Ö®Àà¡£¡±
-
-
-
-
-<p>
-¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡°×ÂíÂÛµÚ¶þ
-
-
-<p>
-¡¡¡¡¡¡¡¡¡°°×Âí·ÇÂí¡±£¬¿Éºõ£¿
-<p>
-¡¡¡¡¡¡¡¡Ô»£º¿É¡£
-<p>
-¡¡¡¡¡¡¡¡Ô»£ººÎÔÕ£¿
-<p>
-¡¡¡¡¡¡¡¡Ô»£ºÂíÕß£¬ËùÒÔÃüÐÎÒ²£»°×Õß£¬ËùÒÔÃüÉ«Ò²¡£ÃüÉ«Õß·ÇÃûÐÎÒ²¡£¹ÊÔ»£º
-
-¡°°×Âí·ÇÂí¡±¡£
-<p>
-¡¡¡¡¡¡¡¡Ô»£ºÓÐÂí²»¿ÉÎ½ÎÞÂíÒ²¡£²»¿ÉÎ½ÎÞÂíÕß£¬·ÇÂíÒ²£¿ÓÐ°×ÂíÎªÓÐÂí£¬°×
-
-Ö®£¬·ÇÂíºÎÒ²£¿
-<p>
-¡¡¡¡¡¡¡¡Ô»£ºÇóÂí£¬»Æ¡¢ºÚÂí½Ô¿ÉÖÂ£»Çó°×Âí£¬»Æ¡¢ºÚÂí²»¿ÉÖÂ¡£ÊÇ°×ÂíÄËÂí
-
-Ò²£¬ÊÇËùÇóÒ»Ò²¡£ËùÇóÒ»Õß£¬°×Õß²»ÒìÂíÒ²£¬ËùÇó²»Òì£¬Èç»Æ¡¢ºÚÂíÓÐ¿ÉÓÐ²»
-
-¿É£¬ºÎÒ²£¿¿ÉÓë²»¿É£¬ÆäÏà·ÇÃ÷¡£Èç»Æ¡¢ºÚÂíÒ»Ò²£¬¶ø¿ÉÒÔÓ¦ÓÐÂí£¬¶ø²»¿ÉÒÔ
-
-Ó¦ÓÐ°×Âí£¬ÊÇ°×ÂíÖ®·ÇÂí£¬ÉóÒÓ£¡
-<p>
-¡¡¡¡¡¡¡¡Ô»£ºÒÔÂíÖ®ÓÐÉ«Îª·ÇÂí£¬ÌìÏÂ·ÇÓÐÎÞÉ«Ö®Âí¡£ÌìÏÂÎÞÂí¿Éºõ£¿
-<p>
-¡¡¡¡¡¡¡¡Ô»£ºÂí¹ÌÓÐÉ«£¬¹ÊÓÐ°×Âí¡£Ê¹ÂíÎÞÉ«£¬ÓÐÂíÈçÒÑ¶ú£¬°²È¡°×Âí£¿¹Ê°×
-
-Âí·ÇÂíÒ²¡£°×ÂíÕß£¬ÂíÓë°×Ò²¡£ºÚÓë°×£¬ÂíÒ²£¿¹ÊÔ»°×Âí·ÇÂíÒµ¡£
-<p>
-¡¡¡¡¡¡¡¡Ô»£ºÂíÎ´Óë°×ÎªÂí£¬°×Î´ÓëÂíÎª°×¡£ºÏÂíÓë°×£¬¸´Ãû°×Âí¡£ÊÇÏàÓëÒÔ
-
-²»ÏàÓëÎªÃû£¬Î´¿É¡£¹ÊÔ»£º°×Âí·ÇÂíÎ´¿É¡£
-<p>
-¡¡¡¡¡¡¡¡Ô»£ºÒÔ¡°ÓÐ°×ÂíÎªÓÐÂí¡±£¬Î½ÓÐ°×ÂíÎªÓÐ»ÆÂí£¬¿Éºõ£¿
-<p>
-¡¡¡¡¡¡¡¡Ô»£ºÎ´¿É¡£
-<p>
-¡¡¡¡¡¡¡¡Ô»£ºÒÔ¡°ÓÐÂíÎªÒìÓÐ»ÆÂí¡±£¬ÊÇÒì»ÆÂíÓëÂíÒ²£»Òì»ÆÂíÓëÂí,ÊÇÒÔ»ÆÎª
-
-·ÇÂí¡£ÒÔ»ÆÂíÎª·ÇÂí£¬¶øÒÔ°×ÂíÎªÓÐÂí£¬´Ë·ÉÕßÈë³Ø¶ø¹×é¤Òì´¦£¬´ËÌìÏÂÖ®ã£
-
-ÑÔ´ÇÒ²¡£
-<p>
-¡¡¡¡¡¡¡¡ÒÔ¡°ÓÐ°×Âí²»¿ÉÎ½ÎÞÂí¡±Õß£¬Àë°×Ö®Î½Ò²£»²»ÀëÕßÓÐ°×Âí²»¿ÉÎ½ÓÐÂí
-
-Ò²¡£¹ÊËùÒÔÎªÓÐÂíÕß£¬¶ÀÒÔÂíÎªÓÐÂí¶ú£¬·ÇÒÔ°×ÂíÎªÓÐÂí¶ú¡£¹ÊÆäÎªÓÐÂíÒ²£¬
-
-²»¿ÉÒÔÎ½¡°°×Âí¡±Ò²¡£
-<p>
-¡¡¡¡¡¡¡¡ÒÔ¡°°×Õß²»¶¨Ëù°×¡±£¬ÍüÖ®¶ø¿ÉÒ²¡£°×ÂíÕß£¬ÑÔ°×¶¨Ëù°×Ò²£¬¶¨Ëù°×
-
-Õß·Ç°×Ò²¡£ÂíÕß£¬ÎÞÈ¥È¡ÓÚÉ«£¬¹Ê»Æ¡¢ºÚ½ÔËùÒÔÓ¦£»°×ÂíÕß£¬ÓÐÈ¥È¡ÓÚÉ«£¬»Æ¡¢
-
-ºÚÂí½ÔËùÒÔÉ«È¥£¬¹ÊÎ¨°×Âí¶À¿ÉÒÔÓ¦¶ú¡£ÎÞÈ¥Õß·ÇÓÐÈ¥Ò²£¬¹ÊÔ»£º¡°°×Âí·ÇÂí
-
-¡±¡£
+å¥½å£«ä¹‹åï¼Œè€Œä¸çŸ¥å¯Ÿå£«ä¹‹ç±»ã€‚â€
 
 
 
 
 <p>
-¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡Ö¸ÎïÂÛµÚÈý
+ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ç™½é©¬è®ºç¬¬äºŒ
 
 
 <p>
-¡¡¡¡¡¡¡¡ÎïÄª·ÇÖ¸£¬¶øÖ¸·ÇÖ¸¡£
+ã€€ã€€ã€€ã€€â€œç™½é©¬éžé©¬â€ï¼Œå¯ä¹Žï¼Ÿ
+<p>
+ã€€ã€€ã€€ã€€æ›°ï¼šå¯ã€‚
+<p>
+ã€€ã€€ã€€ã€€æ›°ï¼šä½•å“‰ï¼Ÿ
+<p>
+ã€€ã€€ã€€ã€€æ›°ï¼šé©¬è€…ï¼Œæ‰€ä»¥å‘½å½¢ä¹Ÿï¼›ç™½è€…ï¼Œæ‰€ä»¥å‘½è‰²ä¹Ÿã€‚å‘½è‰²è€…éžåå½¢ä¹Ÿã€‚æ•…æ›°ï¼š
+
+â€œç™½é©¬éžé©¬â€ã€‚
+<p>
+ã€€ã€€ã€€ã€€æ›°ï¼šæœ‰é©¬ä¸å¯è°“æ— é©¬ä¹Ÿã€‚ä¸å¯è°“æ— é©¬è€…ï¼Œéžé©¬ä¹Ÿï¼Ÿæœ‰ç™½é©¬ä¸ºæœ‰é©¬ï¼Œç™½
+
+ä¹‹ï¼Œéžé©¬ä½•ä¹Ÿï¼Ÿ
+<p>
+ã€€ã€€ã€€ã€€æ›°ï¼šæ±‚é©¬ï¼Œé»„ã€é»‘é©¬çš†å¯è‡´ï¼›æ±‚ç™½é©¬ï¼Œé»„ã€é»‘é©¬ä¸å¯è‡´ã€‚æ˜¯ç™½é©¬ä¹ƒé©¬
+
+ä¹Ÿï¼Œæ˜¯æ‰€æ±‚ä¸€ä¹Ÿã€‚æ‰€æ±‚ä¸€è€…ï¼Œç™½è€…ä¸å¼‚é©¬ä¹Ÿï¼Œæ‰€æ±‚ä¸å¼‚ï¼Œå¦‚é»„ã€é»‘é©¬æœ‰å¯æœ‰ä¸
+
+å¯ï¼Œä½•ä¹Ÿï¼Ÿå¯ä¸Žä¸å¯ï¼Œå…¶ç›¸éžæ˜Žã€‚å¦‚é»„ã€é»‘é©¬ä¸€ä¹Ÿï¼Œè€Œå¯ä»¥åº”æœ‰é©¬ï¼Œè€Œä¸å¯ä»¥
+
+åº”æœ‰ç™½é©¬ï¼Œæ˜¯ç™½é©¬ä¹‹éžé©¬ï¼Œå®¡çŸ£ï¼
+<p>
+ã€€ã€€ã€€ã€€æ›°ï¼šä»¥é©¬ä¹‹æœ‰è‰²ä¸ºéžé©¬ï¼Œå¤©ä¸‹éžæœ‰æ— è‰²ä¹‹é©¬ã€‚å¤©ä¸‹æ— é©¬å¯ä¹Žï¼Ÿ
+<p>
+ã€€ã€€ã€€ã€€æ›°ï¼šé©¬å›ºæœ‰è‰²ï¼Œæ•…æœ‰ç™½é©¬ã€‚ä½¿é©¬æ— è‰²ï¼Œæœ‰é©¬å¦‚å·²è€³ï¼Œå®‰å–ç™½é©¬ï¼Ÿæ•…ç™½
+
+é©¬éžé©¬ä¹Ÿã€‚ç™½é©¬è€…ï¼Œé©¬ä¸Žç™½ä¹Ÿã€‚é»‘ä¸Žç™½ï¼Œé©¬ä¹Ÿï¼Ÿæ•…æ›°ç™½é©¬éžé©¬ä¸šã€‚
+<p>
+ã€€ã€€ã€€ã€€æ›°ï¼šé©¬æœªä¸Žç™½ä¸ºé©¬ï¼Œç™½æœªä¸Žé©¬ä¸ºç™½ã€‚åˆé©¬ä¸Žç™½ï¼Œå¤åç™½é©¬ã€‚æ˜¯ç›¸ä¸Žä»¥
+
+ä¸ç›¸ä¸Žä¸ºåï¼Œæœªå¯ã€‚æ•…æ›°ï¼šç™½é©¬éžé©¬æœªå¯ã€‚
+<p>
+ã€€ã€€ã€€ã€€æ›°ï¼šä»¥â€œæœ‰ç™½é©¬ä¸ºæœ‰é©¬â€ï¼Œè°“æœ‰ç™½é©¬ä¸ºæœ‰é»„é©¬ï¼Œå¯ä¹Žï¼Ÿ
+<p>
+ã€€ã€€ã€€ã€€æ›°ï¼šæœªå¯ã€‚
+<p>
+ã€€ã€€ã€€ã€€æ›°ï¼šä»¥â€œæœ‰é©¬ä¸ºå¼‚æœ‰é»„é©¬â€ï¼Œæ˜¯å¼‚é»„é©¬ä¸Žé©¬ä¹Ÿï¼›å¼‚é»„é©¬ä¸Žé©¬,æ˜¯ä»¥é»„ä¸º
+
+éžé©¬ã€‚ä»¥é»„é©¬ä¸ºéžé©¬ï¼Œè€Œä»¥ç™½é©¬ä¸ºæœ‰é©¬ï¼Œæ­¤é£žè€…å…¥æ± è€Œæ£ºæ¤å¼‚å¤„ï¼Œæ­¤å¤©ä¸‹ä¹‹æ‚–
+
+è¨€è¾žä¹Ÿã€‚
+<p>
+ã€€ã€€ã€€ã€€ä»¥â€œæœ‰ç™½é©¬ä¸å¯è°“æ— é©¬â€è€…ï¼Œç¦»ç™½ä¹‹è°“ä¹Ÿï¼›ä¸ç¦»è€…æœ‰ç™½é©¬ä¸å¯è°“æœ‰é©¬
+
+ä¹Ÿã€‚æ•…æ‰€ä»¥ä¸ºæœ‰é©¬è€…ï¼Œç‹¬ä»¥é©¬ä¸ºæœ‰é©¬è€³ï¼Œéžä»¥ç™½é©¬ä¸ºæœ‰é©¬è€³ã€‚æ•…å…¶ä¸ºæœ‰é©¬ä¹Ÿï¼Œ
+
+ä¸å¯ä»¥è°“â€œç™½é©¬â€ä¹Ÿã€‚
+<p>
+ã€€ã€€ã€€ã€€ä»¥â€œç™½è€…ä¸å®šæ‰€ç™½â€ï¼Œå¿˜ä¹‹è€Œå¯ä¹Ÿã€‚ç™½é©¬è€…ï¼Œè¨€ç™½å®šæ‰€ç™½ä¹Ÿï¼Œå®šæ‰€ç™½
+
+è€…éžç™½ä¹Ÿã€‚é©¬è€…ï¼Œæ— åŽ»å–äºŽè‰²ï¼Œæ•…é»„ã€é»‘çš†æ‰€ä»¥åº”ï¼›ç™½é©¬è€…ï¼Œæœ‰åŽ»å–äºŽè‰²ï¼Œé»„ã€
+
+é»‘é©¬çš†æ‰€ä»¥è‰²åŽ»ï¼Œæ•…å”¯ç™½é©¬ç‹¬å¯ä»¥åº”è€³ã€‚æ— åŽ»è€…éžæœ‰åŽ»ä¹Ÿï¼Œæ•…æ›°ï¼šâ€œç™½é©¬éžé©¬
+
+â€ã€‚
+
+
 
 
 <p>
-¡¡¡¡¡¡¡¡ÌìÏÂÎÞÖ¸£¬ÎïÎÞ¿ÉÒÔÎ½Îï¡£·ÇÖ¸ÕßÌìÏÂ£¬¶øÎï¿ÉÎ½Ö¸ºõ£¿
+ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€æŒ‡ç‰©è®ºç¬¬ä¸‰
 
 
 <p>
-¡¡¡¡¡¡¡¡Ö¸Ò²Õß£¬ÌìÏÂÖ®ËùÎÞÒ²£»ÎïÒ²Õß£¬ÌìÏÂÖ®ËùÓÐÒ²¡£ÒÔÌìÏÂÖ®ËùÓÐ£¬
-
-ÎªÌìÏÂÖ®ËùÎÞ£¬Î´¿É¡£
+ã€€ã€€ã€€ã€€ç‰©èŽ«éžæŒ‡ï¼Œè€ŒæŒ‡éžæŒ‡ã€‚
 
 
 <p>
-¡¡¡¡¡¡¡¡ÌìÏÂÎÞÖ¸,¶øÎï²»¿ÉÎ½Ö¸Ò²¡£²»¿ÉÎ½Ö¸Õß£¬·ÇÖ¸Ò²£¿·ÇÖ¸Õß£¬ÎïÄª
-
-·ÇÖ¸Ò²¡£
+ã€€ã€€ã€€ã€€å¤©ä¸‹æ— æŒ‡ï¼Œç‰©æ— å¯ä»¥è°“ç‰©ã€‚éžæŒ‡è€…å¤©ä¸‹ï¼Œè€Œç‰©å¯è°“æŒ‡ä¹Žï¼Ÿ
 
 
 <p>
-¡¡¡¡¡¡¡¡ÌìÏÂÎÞÖ¸¶øÎï²»¿ÉÎ½Ö¸Õß£¬·ÇÓÐ·ÇÖ¸Ò²¡£·ÇÓÐ·ÇÖ¸Õß£¬ÎïÄª·ÇÖ¸Ò²¡£
+ã€€ã€€ã€€ã€€æŒ‡ä¹Ÿè€…ï¼Œå¤©ä¸‹ä¹‹æ‰€æ— ä¹Ÿï¼›ç‰©ä¹Ÿè€…ï¼Œå¤©ä¸‹ä¹‹æ‰€æœ‰ä¹Ÿã€‚ä»¥å¤©ä¸‹ä¹‹æ‰€æœ‰ï¼Œ
 
-ÎïÄª·ÇÖ¸Õß£¬¶øÖ¸·ÇÖ¸Ò²¡£
-
-
-<p>
-¡¡¡¡¡¡¡¡ÌìÏÂÎÞÖ¸Õß£¬ÉúÓÚÎïÖ®¸÷ÓÐÃû£¬²»ÎªÖ¸Ò²¡£²»ÎªÖ¸¶øÎ½Ö®Ö¸£¬ÊÇÎÞ
-
-²¿ÎªÖ¸¡£ÒÔÓÐ²»ÎªÖ¸Ö®ÎÞ²»ÎªÖ¸£¬Î´¿É¡£
+ä¸ºå¤©ä¸‹ä¹‹æ‰€æ— ï¼Œæœªå¯ã€‚
 
 
 <p>
-¡¡¡¡¡¡¡¡ÒÔ¡°Ö¸ÕßÌìÏÂÖ®ËùÎÞ¡±¡£ÌìÏÂÎÞÖ¸Õß£¬Îï²»¿ÉÎ½ÎÞÖ¸Ò²£»²»¿ÉÎ½ÎÞ
+ã€€ã€€ã€€ã€€å¤©ä¸‹æ— æŒ‡,è€Œç‰©ä¸å¯è°“æŒ‡ä¹Ÿã€‚ä¸å¯è°“æŒ‡è€…ï¼ŒéžæŒ‡ä¹Ÿï¼ŸéžæŒ‡è€…ï¼Œç‰©èŽ«
 
-Ö¸Õß¡£·ÇÓÐ·ÇÖ¸Ò²£»·ÇÓÐ·ÇÖ¸Õß£¬ÎïÄª·ÇÖ¸¡¢Ö¸·Ç·ÇÖ¸Ò²£¬Ö¸ÓëÎï·ÇÖ¸Ò²¡£
-
-
-<p>
-¡¡¡¡¡¡¡¡Ê¹ÌìÏÂÎÞÎïÖ¸£¬Ë­¾¶Î½·ÇÖ¸£¿ÌìÏÂÎÞÎï£¬Ë­¾¶Î½Ö¸£¿ÌìÏÂÓÐÖ¸ÎÞÎï
-
-Ö¸£¬Ë­¾¶Î½·ÇÖ¸¡¢¾¶Î½ÎÞÎï·ÇÖ¸£¿
+éžæŒ‡ä¹Ÿã€‚
 
 
 <p>
-¡¡¡¡¡¡¡¡ÇÒ·òÖ¸¹Ì×ÔÎª·ÇÖ¸£¬ÞÉ´ýÓÚÎï¶øÄËÓëÎªÖ¸£¿
+ã€€ã€€ã€€ã€€å¤©ä¸‹æ— æŒ‡è€Œç‰©ä¸å¯è°“æŒ‡è€…ï¼Œéžæœ‰éžæŒ‡ä¹Ÿã€‚éžæœ‰éžæŒ‡è€…ï¼Œç‰©èŽ«éžæŒ‡ä¹Ÿã€‚
+
+ç‰©èŽ«éžæŒ‡è€…ï¼Œè€ŒæŒ‡éžæŒ‡ä¹Ÿã€‚
+
+
+<p>
+ã€€ã€€ã€€ã€€å¤©ä¸‹æ— æŒ‡è€…ï¼Œç”ŸäºŽç‰©ä¹‹å„æœ‰åï¼Œä¸ä¸ºæŒ‡ä¹Ÿã€‚ä¸ä¸ºæŒ‡è€Œè°“ä¹‹æŒ‡ï¼Œæ˜¯æ— 
+
+éƒ¨ä¸ºæŒ‡ã€‚ä»¥æœ‰ä¸ä¸ºæŒ‡ä¹‹æ— ä¸ä¸ºæŒ‡ï¼Œæœªå¯ã€‚
+
+
+<p>
+ã€€ã€€ã€€ã€€ä»¥â€œæŒ‡è€…å¤©ä¸‹ä¹‹æ‰€æ— â€ã€‚å¤©ä¸‹æ— æŒ‡è€…ï¼Œç‰©ä¸å¯è°“æ— æŒ‡ä¹Ÿï¼›ä¸å¯è°“æ— 
+
+æŒ‡è€…ã€‚éžæœ‰éžæŒ‡ä¹Ÿï¼›éžæœ‰éžæŒ‡è€…ï¼Œç‰©èŽ«éžæŒ‡ã€æŒ‡éžéžæŒ‡ä¹Ÿï¼ŒæŒ‡ä¸Žç‰©éžæŒ‡ä¹Ÿã€‚
+
+
+<p>
+ã€€ã€€ã€€ã€€ä½¿å¤©ä¸‹æ— ç‰©æŒ‡ï¼Œè°å¾„è°“éžæŒ‡ï¼Ÿå¤©ä¸‹æ— ç‰©ï¼Œè°å¾„è°“æŒ‡ï¼Ÿå¤©ä¸‹æœ‰æŒ‡æ— ç‰©
+
+æŒ‡ï¼Œè°å¾„è°“éžæŒ‡ã€å¾„è°“æ— ç‰©éžæŒ‡ï¼Ÿ
+
+
+<p>
+ã€€ã€€ã€€ã€€ä¸”å¤«æŒ‡å›ºè‡ªä¸ºéžæŒ‡ï¼Œå¥šå¾…äºŽç‰©è€Œä¹ƒä¸Žä¸ºæŒ‡ï¼Ÿ
 
 
 
@@ -251,7 +251,7 @@ initializeimg();
 
 
 
-<hr><a href="0_INDEX.html">»ØÄ¿Â¼</a>
+<hr><a href="0_INDEX.html">å›žç›®å½•</a>
 </BODY></HTML>
 
 
