--- a/ebooks/prose/short_pop/s004.html
+++ b/ebooks/prose/short_pop/s004.html
@@ -1,42 +1,42 @@
 <html><meta http-equiv="Content-Type" content="text/html" charset="gb2312"><BODY BGCOLOR="#FFF4E4">
-<title>ÂåÉñ¸³</title></head>
+<title>æ´›ç¥žèµ‹</title></head>
 <p>
-¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡ ÂåÉñ¸³
+ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ æ´›ç¥žèµ‹
 <p>
-¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡  ²ÜÖ²
+ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€  æ›¹æ¤
 <p>
-¡¡¡¡»Æ³õÈýÄê£¬Óà³¯¾©Ê¦£¬»¹¼ÃÂå´¨¡£¹ÅÈËÓÐÑÔ£¬Ë¹Ë®Ö®Éñ£¬ÃûÔ»åµåú¡£¸ÐËÎÓñ¶Ô
-³þÍõÉñÅ®Ö®ÊÂ£¬Ëì×÷Ë¹¸³¡£Æä´ÇÔ»£º
+ã€€ã€€é»„åˆä¸‰å¹´ï¼Œä½™æœäº¬å¸ˆï¼Œè¿˜æµŽæ´›å·ã€‚å¤äººæœ‰è¨€ï¼Œæ–¯æ°´ä¹‹ç¥žï¼Œåæ›°å®“å¦ƒã€‚æ„Ÿå®‹çŽ‰å¯¹
+æ¥šçŽ‹ç¥žå¥³ä¹‹äº‹ï¼Œé‚ä½œæ–¯èµ‹ã€‚å…¶è¾žæ›°ï¼š
 <p>
-¡¡¡¡Óà´Ó¾©Óò£¬ÑÔ¹é¶«·ª¡£±³ÒÁãÚ£¬Ô½ÞSÔ¯£¬¾­Í¨¹È£¬Áê¾°É½¡£ÈÕ¼ÈÎ÷Çã£¬³µ´ùÂí
-·³¡£¶ûÄËË°¼ÝºõÞ¿¸Þ£¬ï÷æáºõÖ¥Ìï£¬ÈÝÓëºõÑôÁÖ£¬Á÷ííºõÂå´¨¡£ÓÚÊÇ¾«ÒÆÉñº§£¬ºö
-ÑÉË¼É¢¡£¸©ÔòÄ©²ì£¬ÑöÒÔÊâ¹Û£¬¶ÃÒ»ÀöÈË£¬ÓÚÑÒÖ®ÅÏ¡£ÄËÔ®ÓùÕß¶ø¸æÖ®Ô»£º¡°¶ûÓÐ
-êëÓÚ±ËÕßºõ£¿±ËºÎÈËË¹£¿Èô´ËÖ®ÑÞÒ²£¡¡±ÓùÕß¶ÔÔ»£º¡°³¼ÎÅºÓÂåÖ®Éñ£¬ÃûÔ»åµåú¡£
-È»Ôò¾ýÍõËù¼û£¬ÎÞÄËÈÕºõ£¿Æä×´ÈôºÎ£¿³¼Ô¸ÎÅÖ®¡£¡±Óà¸æÖ®Ô»£º¡°ÆäÐÎÒ²£¬ôæÈô¾ª
-ºè£¬ÍñÈôÓÎÁú¡£ÈÙê×Çï¾Õ£¬»ªÃ¯´ºËÉ¡£·Â·ðÙâÈôÇáÔÆÖ®±ÎÔÂ£¬Æ®Æ®ÙâÈôÁ÷·çÖ®»ØÑ©¡£
-Ô¶¶øÍûÖ®£¬ð¨ÈôÌ«ÑôÉý³¯Ï¼£»ÆÈ¶ø²ìÖ®£¬×ÆÈôÜ½Þ¡³öäË²¨¡£ÒaÏËµÃÖÔ£¬ÐÞ¶ÌºÏ¶È¡£
-¼çÈôÏ÷³É£¬ÑüÈçÔ¼ËØ¡£ÑÓ¾±ÐãÏî£¬ð©ÖÊ³ÊÂ¶¡£·¼ÔóÎÞ¼Ó£¬Ç¦»ª¸¥Óù¡£ÔÆ÷Ù¶ë¶ë£¬ÐÞ
-Ã¼Áª¾ê¡£µ¤´½ÍâÀÊ£¬ð©³ÝÄÚÏÊ£¬Ã÷íøÉÆíù£¬ØÌ¸¨³ÐÈ¨¡£¹å×ËÑÞÒÝ£¬ÒÇ¾²ÌåÏÐ¡£ÈáÇé
-´ÂÌ¬£¬ÃÄÓÚÓïÑÔ¡£Ææ·þ¿õÊÀ£¬¹ÇÏñÓ¦Í¼¡£ÅûÂÞÒÂÖ®è­ôÓÙâ£¬çíÑþ±ÌÖ®»ªè¢¡£´÷½ð´ä
-Ö®Ê×ÊÎ£¬×ºÃ÷ÖéÒÔÒ«Çû¡£¼ùÔ¶ÓÎÖ®ÎÄÂÄ£¬Ò·Îíç¯Ö®ÇáñÕ¡£Î¢ÓÄÀ¼Ö®·¼°ªÙâ£¬²½õØõé
-ÓÚÉ½Óç¡£ÓÚÊÇºöÑÉ×ÝÌå£¬ÒÔåÛÒÔæÒ¡£×óÒÐ²Éì¸£¬ÓÒÒñ¹ðÆì¡£ÈÀð©ÍóÓÚÉñä°Ùâ£¬²ÉÍÄ
-äþÖ®ÐþÖ¥¡£ÓàÇéÔÃÆäÊçÃÀÙâ£¬ÐÄÕñµ´¶ø²»âù¡£ÎÞÁ¼Ã½ÒÔ½Ó»¶Ùâ£¬ÍÐÎ¢²¨¶øÍ¨´Ç¡£Ô¸
-³ÏËØÖ®ÏÈ´ïÙâ£¬½âÓñÅåÒÔÒªÖ®¡£àµ¼ÑÈËÖ®ÐÅÐÞ£¬Ç¼Ï°Àñ¶øÃ÷Ê«¡£¿¹Çí«ŸÒÔºÍÓèÙâ£¬
-Ö¸Ç±Ô¨¶øÎªÆÚ¡£Ö´¾ì¾ìÖ®¿îÊµÙâ£¬¾åË¹ÁéÖ®ÎÒÆÛ¡£¸Ð½»¸¦Ö®ÆúÑÔÙâ£¬âêÓÌÔ¥¶øºüÒÉ¡£
-ÊÕºÍÑÕ¶ø¾²Ö¾Ùâ£¬ÉêÀñ·ÀÒÔ×Ô³Ö¡£ÓÚÊÇÂåÁé¸ÐÑÉ£¬áãÒÐáÝáå£¬Éñ¹âÀëºÏ£¬Õ§ÒõÕ§Ñô¡£
-ñµÇáÇûÒÔº×Á¢£¬Èô½«·É¶øÎ´Ïè¡£¼ù½·Í¿Ö®ÓôÁÒ£¬²½Þ¿±¡¶øÁ÷·¼¡£³¬³¤Ò÷ÒÔÓÀÄ½Ùâ£¬
-Éù°§À÷¶øÃÖ³¤¡£¶ûÄËÖÚÁéÔÓåÝ£¬ÃüÙ±Ð¥ÂÂ£¬»òÏ·ÇåÁ÷£¬»òÏèÉñä¾£¬»ò²ÉÃ÷Öé£¬»òÊ°
-´äÓð¡£´ÓÄÏÏæÖ®¶þåú£¬Ð¯ºº±õÖ®ÓÎÅ®¡£Ì¾ÞË¹ÏÖ®ÎÞÆ¥Ùâ£¬Ó½Ç£Å£Ö®¶À´¦¡£ÑïÇáÑOÖ®
-â¢ÃÒÙâ£¬ôèÐÞÐäÒÔÑÓÐ¡£ÐÝÑ¸·ÉÙì£¬Æ®ºöÈôÉñ£¬Áê²¨Î¢²½£¬ÂÞÍàÉú³¾¡£¶¯ÎÞ³£Ôò£¬
-ÈôÎ£Èô°²¡£½øÖ¹ÄÑÆÚ£¬ÈôÍùÈô»¹¡£×ªííÁ÷¾«£¬¹âÈóÓñÑÕ¡£º¬´ÇÎ´ÍÂ£¬ÆøÈôÓÄÀ¼¡£»ª
-ÈÝæ¹ÄÈ£¬ÁîÎÒÍü²Í¡£ÓÚÊÇÆÁôèÊÕ·ç£¬´¨ºó¾²²¨¡£·ëÒÄÃù¹Ä£¬Å®æ´Çå¸è¡£ÌÚÎÄÓãÒÔ¾¯
-³Ë£¬ÃùÓñð½ÒÔÙÉÊÅ¡£ÁùÁúÙ²ÆäÆëÊ×£¬ÔØÔÆ³µÖ®ÈÝÒá£¬¾¨öòÓ»¶ø¼Ðì±£¬Ë®ÇÝÏè¶øÎªÎÀ¡£
-ÓÚÊÇÔ½±±›b¡£¹ýÄÏ¸Ô£¬æúËØÁì£¬»ØÇåÑô£¬¶¯Öì´½ÒÔÐìÑÔ£¬³Â½»½ÓÖ®´ó¸Ù¡£ºÞÈËÉñÖ®
-µÀÊâÙâ£¬Ô¹Ê¢ÄêÖ®Äªµ±¡£¿¹ÂÞñÇÒÔÑÚÌéÙâ£¬ÀáÁ÷½óÖ®ÀËÀË¡£µ¿Á¼»áÖ®ÓÀ¾øÙâ¡£°§Ò»
-ÊÅ¶øÒìÏç¡£ÎÞÎ¢ÇéÒÔÐ§°®Ùâ£¬Ï×½­ÄÏÖ®Ã÷«š¡£ËäÇ±´¦ÓÚÌ«Ñô£¬³¤¼ÄÐÄÓÚ¾ýÍõ¡£ºö²»
-ÎòÆäËùÉá£¬âêÉñÏü¶ø±Î¹â¡£ÓÚÊÇ±³ÏÂÁê¸ß£¬×ãÍùÉñÁô£¬ÒÅÇéÏëÏñ£¬¹ËÍû»³³î¡£¼½Áé
-ÌåÖ®¸´ÐÎ£¬ÓùÇáÖÛ¶øÉÏËÝ¡£¸¡³¤´¨¶øÍü·µ£¬Ë¼ÃàÃà¶½¡£Ò¹¹¢¹¢¶ø²»ÃÂ£¬Õ´·±Ëª¶øÖÁ
-Êï¡£ÃüÆÍ·ò¶ø¾Í¼Ý£¬Îá½«¹éºõ¶«Â·¡£À¿òWàÎÒÔ¿¹²ß£¬âêÅÌ»¸¶ø²»ÄÜÈ¥¡£
+ã€€ã€€ä½™ä»Žäº¬åŸŸï¼Œè¨€å½’ä¸œè—©ã€‚èƒŒä¼Šé˜™ï¼Œè¶Šè½˜è¾•ï¼Œç»é€šè°·ï¼Œé™µæ™¯å±±ã€‚æ—¥æ—¢è¥¿å€¾ï¼Œè½¦æ®†é©¬
+çƒ¦ã€‚å°”ä¹ƒç¨Žé©¾ä¹Žè˜…çš‹ï¼Œç§£é©·ä¹ŽèŠç”°ï¼Œå®¹ä¸Žä¹Žé˜³æž—ï¼Œæµçœ„ä¹Žæ´›å·ã€‚äºŽæ˜¯ç²¾ç§»ç¥žéª‡ï¼Œå¿½
+ç„‰æ€æ•£ã€‚ä¿¯åˆ™æœ«å¯Ÿï¼Œä»°ä»¥æ®Šè§‚ï¼Œç¹ä¸€ä¸½äººï¼ŒäºŽå²©ä¹‹ç•”ã€‚ä¹ƒæ´å¾¡è€…è€Œå‘Šä¹‹æ›°ï¼šâ€œå°”æœ‰
+è§ŒäºŽå½¼è€…ä¹Žï¼Ÿå½¼ä½•äººæ–¯ï¼Ÿè‹¥æ­¤ä¹‹è‰³ä¹Ÿï¼â€å¾¡è€…å¯¹æ›°ï¼šâ€œè‡£é—»æ²³æ´›ä¹‹ç¥žï¼Œåæ›°å®“å¦ƒã€‚
+ç„¶åˆ™å›çŽ‹æ‰€è§ï¼Œæ— ä¹ƒæ—¥ä¹Žï¼Ÿå…¶çŠ¶è‹¥ä½•ï¼Ÿè‡£æ„¿é—»ä¹‹ã€‚â€ä½™å‘Šä¹‹æ›°ï¼šâ€œå…¶å½¢ä¹Ÿï¼Œç¿©è‹¥æƒŠ
+é¸¿ï¼Œå©‰è‹¥æ¸¸é¾™ã€‚è£æ›œç§‹èŠï¼ŒåŽèŒ‚æ˜¥æ¾ã€‚ä»¿ä½›å…®è‹¥è½»äº‘ä¹‹è”½æœˆï¼Œé£˜é£˜å…®è‹¥æµé£Žä¹‹å›žé›ªã€‚
+è¿œè€Œæœ›ä¹‹ï¼ŒçšŽè‹¥å¤ªé˜³å‡æœéœžï¼›è¿«è€Œå¯Ÿä¹‹ï¼Œç¼è‹¥èŠ™è•–å‡ºæ¸Œæ³¢ã€‚è¥›çº¤å¾—è¡·ï¼Œä¿®çŸ­åˆåº¦ã€‚
+è‚©è‹¥å‰Šæˆï¼Œè…°å¦‚çº¦ç´ ã€‚å»¶é¢ˆç§€é¡¹ï¼Œçš“è´¨å‘ˆéœ²ã€‚èŠ³æ³½æ— åŠ ï¼Œé“…åŽå¼—å¾¡ã€‚äº‘é«»å³¨å³¨ï¼Œä¿®
+çœ‰è”å¨Ÿã€‚ä¸¹å”‡å¤–æœ—ï¼Œçš“é½¿å†…é²œï¼Œæ˜Žçœ¸å–„çï¼Œé¥è¾…æ‰¿æƒã€‚ç‘°å§¿è‰³é€¸ï¼Œä»ªé™ä½“é—²ã€‚æŸ”æƒ…
+ç»°æ€ï¼ŒåªšäºŽè¯­è¨€ã€‚å¥‡æœæ—·ä¸–ï¼Œéª¨åƒåº”å›¾ã€‚æŠ«ç½—è¡£ä¹‹ç’€ç²²å…®ï¼Œç¥ç‘¶ç¢§ä¹‹åŽçšã€‚æˆ´é‡‘ç¿ 
+ä¹‹é¦–é¥°ï¼Œç¼€æ˜Žç ä»¥è€€èº¯ã€‚è·µè¿œæ¸¸ä¹‹æ–‡å±¥ï¼Œæ›³é›¾ç»¡ä¹‹è½»è£¾ã€‚å¾®å¹½å…°ä¹‹èŠ³è”¼å…®ï¼Œæ­¥è¸Ÿè¹°
+äºŽå±±éš…ã€‚äºŽæ˜¯å¿½ç„‰çºµä½“ï¼Œä»¥é¨ä»¥å¬‰ã€‚å·¦å€šé‡‡æ—„ï¼Œå³è«æ¡‚æ——ã€‚å£¤çš“è…•äºŽç¥žæµ’å…®ï¼Œé‡‡æ¹
+æ¿‘ä¹‹çŽ„èŠã€‚ä½™æƒ…æ‚¦å…¶æ·‘ç¾Žå…®ï¼Œå¿ƒæŒ¯è¡è€Œä¸æ€¡ã€‚æ— è‰¯åª’ä»¥æŽ¥æ¬¢å…®ï¼Œæ‰˜å¾®æ³¢è€Œé€šè¾žã€‚æ„¿
+è¯šç´ ä¹‹å…ˆè¾¾å…®ï¼Œè§£çŽ‰ä½©ä»¥è¦ä¹‹ã€‚å—Ÿä½³äººä¹‹ä¿¡ä¿®ï¼Œç¾Œä¹ ç¤¼è€Œæ˜Žè¯—ã€‚æŠ—ç¼ç¶ä»¥å’Œäºˆå…®ï¼Œ
+æŒ‡æ½œæ¸Šè€Œä¸ºæœŸã€‚æ‰§çœ·çœ·ä¹‹æ¬¾å®žå…®ï¼Œæƒ§æ–¯çµä¹‹æˆ‘æ¬ºã€‚æ„Ÿäº¤ç”«ä¹‹å¼ƒè¨€å…®ï¼Œæ€…çŠ¹è±«è€Œç‹ç–‘ã€‚
+æ”¶å’Œé¢œè€Œé™å¿—å…®ï¼Œç”³ç¤¼é˜²ä»¥è‡ªæŒã€‚äºŽæ˜¯æ´›çµæ„Ÿç„‰ï¼Œå¾™å€šå½·å¾¨ï¼Œç¥žå…‰ç¦»åˆï¼Œä¹é˜´ä¹é˜³ã€‚
+ç«¦è½»èº¯ä»¥é¹¤ç«‹ï¼Œè‹¥å°†é£žè€Œæœªç¿”ã€‚è·µæ¤’æ¶‚ä¹‹éƒçƒˆï¼Œæ­¥è˜…è–„è€ŒæµèŠ³ã€‚è¶…é•¿åŸä»¥æ°¸æ…•å…®ï¼Œ
+å£°å“€åŽ‰è€Œå¼¥é•¿ã€‚å°”ä¹ƒä¼—çµæ‚é¢ï¼Œå‘½ä¿¦å•¸ä¾£ï¼Œæˆ–æˆæ¸…æµï¼Œæˆ–ç¿”ç¥žæ¸šï¼Œæˆ–é‡‡æ˜Žç ï¼Œæˆ–æ‹¾
+ç¿ ç¾½ã€‚ä»Žå—æ¹˜ä¹‹äºŒå¦ƒï¼Œæºæ±‰æ»¨ä¹‹æ¸¸å¥³ã€‚å¹åŒç“œä¹‹æ— åŒ¹å…®ï¼Œå’ç‰µç‰›ä¹‹ç‹¬å¤„ã€‚æ‰¬è½»è¢¿ä¹‹
+çŒ—é¡å…®ï¼Œç¿³ä¿®è¢–ä»¥å»¶ä½‡ã€‚ä¼‘è¿…é£žå‡«ï¼Œé£˜å¿½è‹¥ç¥žï¼Œé™µæ³¢å¾®æ­¥ï¼Œç½—è¢œç”Ÿå°˜ã€‚åŠ¨æ— å¸¸åˆ™ï¼Œ
+è‹¥å±è‹¥å®‰ã€‚è¿›æ­¢éš¾æœŸï¼Œè‹¥å¾€è‹¥è¿˜ã€‚è½¬çœ„æµç²¾ï¼Œå…‰æ¶¦çŽ‰é¢œã€‚å«è¾žæœªåï¼Œæ°”è‹¥å¹½å…°ã€‚åŽ
+å®¹å©€å¨œï¼Œä»¤æˆ‘å¿˜é¤ã€‚äºŽæ˜¯å±ç¿³æ”¶é£Žï¼Œå·åŽé™æ³¢ã€‚å†¯å¤·é¸£é¼“ï¼Œå¥³å¨²æ¸…æ­Œã€‚è…¾æ–‡é±¼ä»¥è­¦
+ä¹˜ï¼Œé¸£çŽ‰é¸¾ä»¥å•é€ã€‚å…­é¾™ä¿¨å…¶é½é¦–ï¼Œè½½äº‘è½¦ä¹‹å®¹è£”ï¼Œé²¸é²µè¸Šè€Œå¤¹æ¯‚ï¼Œæ°´ç¦½ç¿”è€Œä¸ºå«ã€‚
+äºŽæ˜¯è¶ŠåŒ—æ²šã€‚è¿‡å—å†ˆï¼Œçº¡ç´ é¢†ï¼Œå›žæ¸…é˜³ï¼ŒåŠ¨æœ±å”‡ä»¥å¾è¨€ï¼Œé™ˆäº¤æŽ¥ä¹‹å¤§çº²ã€‚æ¨äººç¥žä¹‹
+é“æ®Šå…®ï¼Œæ€¨ç››å¹´ä¹‹èŽ«å½“ã€‚æŠ—ç½—è¢‚ä»¥æŽ©æ¶•å…®ï¼Œæ³ªæµè¥Ÿä¹‹æµªæµªã€‚æ‚¼è‰¯ä¼šä¹‹æ°¸ç»å…®ã€‚å“€ä¸€
+é€è€Œå¼‚ä¹¡ã€‚æ— å¾®æƒ…ä»¥æ•ˆçˆ±å…®ï¼ŒçŒ®æ±Ÿå—ä¹‹æ˜Žç°ã€‚è™½æ½œå¤„äºŽå¤ªé˜³ï¼Œé•¿å¯„å¿ƒäºŽå›çŽ‹ã€‚å¿½ä¸
+æ‚Ÿå…¶æ‰€èˆï¼Œæ€…ç¥žå®µè€Œè”½å…‰ã€‚äºŽæ˜¯èƒŒä¸‹é™µé«˜ï¼Œè¶³å¾€ç¥žç•™ï¼Œé—æƒ…æƒ³åƒï¼Œé¡¾æœ›æ€€æ„ã€‚å†€çµ
+ä½“ä¹‹å¤å½¢ï¼Œå¾¡è½»èˆŸè€Œä¸Šæº¯ã€‚æµ®é•¿å·è€Œå¿˜è¿”ï¼Œæ€ç»µç»µç£ã€‚å¤œè€¿è€¿è€Œä¸å¯ï¼Œæ²¾ç¹éœœè€Œè‡³
+æ›™ã€‚å‘½ä»†å¤«è€Œå°±é©¾ï¼Œå¾å°†å½’ä¹Žä¸œè·¯ã€‚æ½é¨‘è¾”ä»¥æŠ—ç­–ï¼Œæ€…ç›˜æ¡“è€Œä¸èƒ½åŽ»ã€‚
 
-<hr><a href="0_INDEX.html">»ØÄ¿Â¼</a>
+<hr><a href="0_INDEX.html">å›žç›®å½•</a>
 </body></html>
