--- a/ebooks/prose/short_pop/s008.html
+++ b/ebooks/prose/short_pop/s008.html
@@ -1,38 +1,38 @@
 <html><meta http-equiv="Content-Type" content="text/html" charset="gb2312"><BODY BGCOLOR="#FFF4E4">
-<title>¸ß½àËµ</title></head>
+<title>é«˜æ´è¯´</title></head>
 <p>
-¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡ ¸ß½àËµ
+ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ é«˜æ´è¯´
 <p>
-¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡[Ã÷]ÀîêÞ
+ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€[æ˜Ž]æŽè´½
 <p>
-¡¡¡¡ÓèÐÔºÃ¸ß£¬ºÃ¸ßÔòÙÆ°Á¶ø²»ÄÜÏÂ¡£È»Ëù²»ÄÜÏÂÕß£¬²»ÄÜÏÂ±ËÒ»µÈÒÐÊÆÕÌ¸»Ö®ÈË
-¶ú¡£·ñÔòÉÔÓÐÆ¬³¤´çÉÆ£¬ËäÁ¥×äÈËÅ«£¬ÎÞ²»°ÝÒ²¡£ÓèÐÔºÃ½à£¬ºÃ½àÔòáú°¯²»ÄÜÈÝ¡£
-È»Ëù²»ÄÜÈÝÕß£¬²»ÄÜÈÝ±ËÒ»µÈÇ÷ÊÆÚÆ¸»Ö®ÈË¶ú¡£·ñÔò¹ûÓÐÆ¬ÉÆ´ç³¤£¬×ÝÉíÎª´óÈËÍõ
-¹«£¬ÎÞ²»±öÒ²¡£ÄÜÏÂÈË£¬¹ÊÐÄÐé£»ÆäÐÄÐé£¬¹ÊËùÈ¡¹ã£»ËùÈ¡¹ã£¬¹ÊÆäÈËÓú¸ß¡£È»Ôò
-ÑÔÌìÏÂÖ®ÄÜÏÂÈËÕß£¬¹ÌÑÔÌìÏÂÖ®¼«ºÃ¸ßÈËÕßÒ²¡£ÓèÖ®ºÃ¸ß£¬²»ÒàÒËºõ£¡ÄÜÈ¡ÈË£¬±Ø
-ÎÞÒÅÈË£»ÎÞÒÅÈË£¬ÔòÎÞÈË²»ÈÝ£»ÎÞÈË²»ÈÝ£¬ÔòÎÞ²»½àÖ®ÐÐÒÓ¡£È»ÔòÑÔÌìÏÂÖ®ÄÜÈÝÕß£¬
-¹ÌÑÔÌìÏÂÖ®¼«ºÃ½àÈËÕßÒ²¡£ÓèÖ®ºÃ½à£¬²»ÒàÒËºõ£¡½ñÊÀö»öºÕß£¬½ÔÒÔÓèáú°¯¶ø²»ÄÜ
-ÈÝ£¬ÙÆ°Á¶ø²»ÄÜÏÂ£¬Î½Óè×ÔÖÁ»Æ°²£¬ÖÕÈÕËøÃÅ£¬¶øÊ¹·½µ¤É½ÓÐºÃ¸öËÄ·½ÇóÓÑÖ®¼¥£»
-×Ô×¡Áúºþ£¬Ëä²»ËøÃÅ£¬È»ÖÁÃÅ¶ø²»µÃ¼û£¬»ò¼û¶ø²»½ÓÀñÕß£¬×ÝÓÐÒ»¶þ¼ÓÀñÖ®ÈË£¬Òà
-²»¾Ã¼´ÑáÆú¡£ÊÇÊÀË×Ö®ÂÛÎÒÈç´ËÒ²¡£Êâ²»ÖªÎÒÖÕÈÕ±ÕÃÅ£¬ÖÕÈÕÓÐÓû¼ûÊ¤¼ºÖ®ÐÄÒ²£»
-ÖÕÄê¶À×ø£¬ÖÕÄêÓÐ²»¼ûÖª¼ºÖ®ºÞÒ²£¬´ËÄÑÓë¶û±²µÀÒ²¡£ÆäÆÄËµµÃ»°Õß£¬ÓÖÒÔÓèÎÞÄ¿
-¶ø²»ÄÜÖªÈË£¬¹Ê×äÎªÈËËùÆÛ£»Æ«°®¶ø²»¹«£¬¹Ê×ä²»ÄÜÓëÈËÒÔÖÕÊ¼¡£±Ë×ÔÎ½ÀëÃ«¼ûÆ¤£¬
-´µÃ«¼û¿×£¬ËùÂÛÈ·ÒÓ¡£ÆäÊµÊÓÊÀÖ®ö»öºÕß£¬½öÎåÊ®²½£¬°²×ãµÀÒ®£¿·ò¿Õ¹È×ãÒô£¬¼û
-ËÆÈËÓÌÏ²£¬¶øÎ½ÎÒ²»Óû¼ûÈË£¬ÓÐÊÇÀíºõ£¡µÚ¿ÖÉÐÎ´ËÆÈË¶ú¡£¹¶¼´ÂÔËÆÈËÐÎ£¬µ±¼´ÏÂ
-°Ý£¬¶øÍüÆäÈËÖ®¼úÒ²£»±¼×ß£¬¶øÍüÆäÈËÖ®¹óÒ²¡£ÊÇÒÔÍùÍù¼ûÈËÖ®³¤£¬¶øËìÍüÆä¶Ì¡£
-·Çµ«ÍüÆä¶ÌÒ²£¬·½ÇÒÂ¡Àñ¶øÊ¦ÊÂÖ®£¬¶ø¿öÖªÎáÖ®ÎªÆ«°®Ò®£¡ºÎÒ²£¿ºÃÓÑÄÑÓö£¬Èô·Ç
-ÎáÀñ¾´Ö®ÖÁ£¬Ê¦ÊÂÖ®³Ï£¬Ôò±Ë´ÏÃ÷²ÅÏÍÖ®Ê¿£¬ÓÖêÂ¿ÏÎªÎÒÓÑºõ£¡±ØÓûÓëÖ®ÎªÓÑ£¬Ôò
-²»µÃ²»ÖÂÎáÀñÊýÖ®Â¡¡£È»ÌìÏÂÖ®Õæ²ÅÕæ´ÏÃ÷ÕßÊµÉÙÒ²£¬ÍùÍùÎá¾¡¾´ÊÂÖ®³Ï£¬¶ø±Ë´Ï
-Ã÷ÕßÓÐ²ÅÕß£¬ÖÕ·ÇÆäÕæ£¬ÔòÆäÊÆÓÖ²»µÃ¶ø²»ÓëÖ®Êè¡£ÇÒ²»µ«²»ÕæÒ²£¬ÓÖÇÒÓÐ¼éÐ°ÑÉ£¬
-ÔòÆäÊÆÓÖ²»µÃ¶ø²»ÈÕÓëÖ®Ô¶¡£ÊÇ¹ÊÖÚÈËÏÌÎ½ÎÒÎªÎÞÄ¿¶ú¡£·òÊ¹ÎÒ¶ø¹ûÎÞÄ¿Ò²£¬Ôò±Ø
-²»ÄÜÒÔÖÕÔ¶£»Ê¹ÎÒ¹ûÆ«°®²»¹«Ò²£¬Ôò±Ø»¤¶ÌÒÔÖÕÉí¡£¹ÊÎªÆ«°®ÎÞÄ¿Ö®ÂÛÕß£¬½ÔËÆÖ®
-¶ø·ÇÒ²¡£½ñ»Æ°²¶þÉÏÈËµ½´Ë£¬ÈËÓÖ±ØÇÒÒÔÎÒÎªÆ«°®ÒÓ¡£¶þÉÏÈËÆäÎñÓëÎÒÊ¼ÖÕÖ®£¬ÎÞ
-Ê¹ÎÒÊÜÎÞÄ¿Ö®ÃûÒ²¡£È»¶þÉÏÈËÊµÖªÓàÖ®¿àÐÄÒ²£¬ÊµÖªÓàÖ®¹Âµ¥Äª¿É¸æÓïÒ²£¬ÊµÖªÓà
-Ö®ÇóÈËÉõÓÚÈËÖ®ÇóÓàÒ²¡£ÓàÓÖ·ÇÒÔ¶þÉÏÈËÖ®²Å£¬ÊµÒÔ¶þÉÏÈËÖ®µÂÒ²£»·ÇÒÔÆä´ÏÃ÷£¬
-ÊµÒÔÆäóÆÊµÒ²¡£¹ÊÓÐµÂÕß±ØóÆÊµ£¬óÆÊµÕßÔò±ØÓÐµÂ£¬¶þÉÏÈËÎáºÎ»¼ºõ£¡¶þÉÏÈËÊ¦ÊÂ
-ÀîÊÙâÖ£¬ÊÙâÖÊ¦ÊÂµË»íÏª¡£µË»íÏªÖ¾Èç½ð¸Õ£¬µ¨ÈçÌì´ó£¬Ñ§´ÓÐÄÎò£¬ÖÇ¹ýÓÚÊ¦£¬¹Ê
-ËùÈ¡Ö®Í½ÈçÆäÊ¦£¬ÆäÍ½ËïÈçÆäÍ½¡£ÎáÒÔÊÇ²·Ö®£¬¶øÖª¶þÉÏÈËÖ®±ØÄÜÈçÎÒ³öÆøÎÞÒÉÒ²£¬
-¹Ê×÷ºÃ¸ßºÃ½àÖ®ËµÒÔêÝÖ®¡£
+ã€€ã€€äºˆæ€§å¥½é«˜ï¼Œå¥½é«˜åˆ™å€¨å‚²è€Œä¸èƒ½ä¸‹ã€‚ç„¶æ‰€ä¸èƒ½ä¸‹è€…ï¼Œä¸èƒ½ä¸‹å½¼ä¸€ç­‰å€šåŠ¿ä»—å¯Œä¹‹äºº
+è€³ã€‚å¦åˆ™ç¨æœ‰ç‰‡é•¿å¯¸å–„ï¼Œè™½éš¶å’äººå¥´ï¼Œæ— ä¸æ‹œä¹Ÿã€‚äºˆæ€§å¥½æ´ï¼Œå¥½æ´åˆ™ç‹·éš˜ä¸èƒ½å®¹ã€‚
+ç„¶æ‰€ä¸èƒ½å®¹è€…ï¼Œä¸èƒ½å®¹å½¼ä¸€ç­‰è¶‹åŠ¿è°„å¯Œä¹‹äººè€³ã€‚å¦åˆ™æžœæœ‰ç‰‡å–„å¯¸é•¿ï¼Œçºµèº«ä¸ºå¤§äººçŽ‹
+å…¬ï¼Œæ— ä¸å®¾ä¹Ÿã€‚èƒ½ä¸‹äººï¼Œæ•…å¿ƒè™šï¼›å…¶å¿ƒè™šï¼Œæ•…æ‰€å–å¹¿ï¼›æ‰€å–å¹¿ï¼Œæ•…å…¶äººæ„ˆé«˜ã€‚ç„¶åˆ™
+è¨€å¤©ä¸‹ä¹‹èƒ½ä¸‹äººè€…ï¼Œå›ºè¨€å¤©ä¸‹ä¹‹æžå¥½é«˜äººè€…ä¹Ÿã€‚äºˆä¹‹å¥½é«˜ï¼Œä¸äº¦å®œä¹Žï¼èƒ½å–äººï¼Œå¿…
+æ— é—äººï¼›æ— é—äººï¼Œåˆ™æ— äººä¸å®¹ï¼›æ— äººä¸å®¹ï¼Œåˆ™æ— ä¸æ´ä¹‹è¡ŒçŸ£ã€‚ç„¶åˆ™è¨€å¤©ä¸‹ä¹‹èƒ½å®¹è€…ï¼Œ
+å›ºè¨€å¤©ä¸‹ä¹‹æžå¥½æ´äººè€…ä¹Ÿã€‚äºˆä¹‹å¥½æ´ï¼Œä¸äº¦å®œä¹Žï¼ä»Šä¸–é¾Œé¾Šè€…ï¼Œçš†ä»¥äºˆç‹·éš˜è€Œä¸èƒ½
+å®¹ï¼Œå€¨å‚²è€Œä¸èƒ½ä¸‹ï¼Œè°“äºˆè‡ªè‡³é»„å®‰ï¼Œç»ˆæ—¥é”é—¨ï¼Œè€Œä½¿æ–¹ä¸¹å±±æœ‰å¥½ä¸ªå››æ–¹æ±‚å‹ä¹‹è®¥ï¼›
+è‡ªä½é¾™æ¹–ï¼Œè™½ä¸é”é—¨ï¼Œç„¶è‡³é—¨è€Œä¸å¾—è§ï¼Œæˆ–è§è€Œä¸æŽ¥ç¤¼è€…ï¼Œçºµæœ‰ä¸€äºŒåŠ ç¤¼ä¹‹äººï¼Œäº¦
+ä¸ä¹…å³åŽŒå¼ƒã€‚æ˜¯ä¸–ä¿—ä¹‹è®ºæˆ‘å¦‚æ­¤ä¹Ÿã€‚æ®Šä¸çŸ¥æˆ‘ç»ˆæ—¥é—­é—¨ï¼Œç»ˆæ—¥æœ‰æ¬²è§èƒœå·±ä¹‹å¿ƒä¹Ÿï¼›
+ç»ˆå¹´ç‹¬åï¼Œç»ˆå¹´æœ‰ä¸è§çŸ¥å·±ä¹‹æ¨ä¹Ÿï¼Œæ­¤éš¾ä¸Žå°”è¾ˆé“ä¹Ÿã€‚å…¶é¢‡è¯´å¾—è¯è€…ï¼Œåˆä»¥äºˆæ— ç›®
+è€Œä¸èƒ½çŸ¥äººï¼Œæ•…å’ä¸ºäººæ‰€æ¬ºï¼›åçˆ±è€Œä¸å…¬ï¼Œæ•…å’ä¸èƒ½ä¸Žäººä»¥ç»ˆå§‹ã€‚å½¼è‡ªè°“ç¦»æ¯›è§çš®ï¼Œ
+å¹æ¯›è§å­”ï¼Œæ‰€è®ºç¡®çŸ£ã€‚å…¶å®žè§†ä¸–ä¹‹é¾Œé¾Šè€…ï¼Œä»…äº”åæ­¥ï¼Œå®‰è¶³é“è€¶ï¼Ÿå¤«ç©ºè°·è¶³éŸ³ï¼Œè§
+ä¼¼äººçŠ¹å–œï¼Œè€Œè°“æˆ‘ä¸æ¬²è§äººï¼Œæœ‰æ˜¯ç†ä¹Žï¼ç¬¬æå°šæœªä¼¼äººè€³ã€‚è‹Ÿå³ç•¥ä¼¼äººå½¢ï¼Œå½“å³ä¸‹
+æ‹œï¼Œè€Œå¿˜å…¶äººä¹‹è´±ä¹Ÿï¼›å¥”èµ°ï¼Œè€Œå¿˜å…¶äººä¹‹è´µä¹Ÿã€‚æ˜¯ä»¥å¾€å¾€è§äººä¹‹é•¿ï¼Œè€Œé‚å¿˜å…¶çŸ­ã€‚
+éžä½†å¿˜å…¶çŸ­ä¹Ÿï¼Œæ–¹ä¸”éš†ç¤¼è€Œå¸ˆäº‹ä¹‹ï¼Œè€Œå†µçŸ¥å¾ä¹‹ä¸ºåçˆ±è€¶ï¼ä½•ä¹Ÿï¼Ÿå¥½å‹éš¾é‡ï¼Œè‹¥éž
+å¾ç¤¼æ•¬ä¹‹è‡³ï¼Œå¸ˆäº‹ä¹‹è¯šï¼Œåˆ™å½¼èªæ˜Žæ‰è´¤ä¹‹å£«ï¼Œåˆæ›·è‚¯ä¸ºæˆ‘å‹ä¹Žï¼å¿…æ¬²ä¸Žä¹‹ä¸ºå‹ï¼Œåˆ™
+ä¸å¾—ä¸è‡´å¾ç¤¼æ•°ä¹‹éš†ã€‚ç„¶å¤©ä¸‹ä¹‹çœŸæ‰çœŸèªæ˜Žè€…å®žå°‘ä¹Ÿï¼Œå¾€å¾€å¾å°½æ•¬äº‹ä¹‹è¯šï¼Œè€Œå½¼èª
+æ˜Žè€…æœ‰æ‰è€…ï¼Œç»ˆéžå…¶çœŸï¼Œåˆ™å…¶åŠ¿åˆä¸å¾—è€Œä¸ä¸Žä¹‹ç–ã€‚ä¸”ä¸ä½†ä¸çœŸä¹Ÿï¼Œåˆä¸”æœ‰å¥¸é‚ªç„‰ï¼Œ
+åˆ™å…¶åŠ¿åˆä¸å¾—è€Œä¸æ—¥ä¸Žä¹‹è¿œã€‚æ˜¯æ•…ä¼—äººå’¸è°“æˆ‘ä¸ºæ— ç›®è€³ã€‚å¤«ä½¿æˆ‘è€Œæžœæ— ç›®ä¹Ÿï¼Œåˆ™å¿…
+ä¸èƒ½ä»¥ç»ˆè¿œï¼›ä½¿æˆ‘æžœåçˆ±ä¸å…¬ä¹Ÿï¼Œåˆ™å¿…æŠ¤çŸ­ä»¥ç»ˆèº«ã€‚æ•…ä¸ºåçˆ±æ— ç›®ä¹‹è®ºè€…ï¼Œçš†ä¼¼ä¹‹
+è€Œéžä¹Ÿã€‚ä»Šé»„å®‰äºŒä¸Šäººåˆ°æ­¤ï¼Œäººåˆå¿…ä¸”ä»¥æˆ‘ä¸ºåçˆ±çŸ£ã€‚äºŒä¸Šäººå…¶åŠ¡ä¸Žæˆ‘å§‹ç»ˆä¹‹ï¼Œæ— 
+ä½¿æˆ‘å—æ— ç›®ä¹‹åä¹Ÿã€‚ç„¶äºŒä¸Šäººå®žçŸ¥ä½™ä¹‹è‹¦å¿ƒä¹Ÿï¼Œå®žçŸ¥ä½™ä¹‹å­¤å•èŽ«å¯å‘Šè¯­ä¹Ÿï¼Œå®žçŸ¥ä½™
+ä¹‹æ±‚äººç”šäºŽäººä¹‹æ±‚ä½™ä¹Ÿã€‚ä½™åˆéžä»¥äºŒä¸Šäººä¹‹æ‰ï¼Œå®žä»¥äºŒä¸Šäººä¹‹å¾·ä¹Ÿï¼›éžä»¥å…¶èªæ˜Žï¼Œ
+å®žä»¥å…¶ç¬ƒå®žä¹Ÿã€‚æ•…æœ‰å¾·è€…å¿…ç¬ƒå®žï¼Œç¬ƒå®žè€…åˆ™å¿…æœ‰å¾·ï¼ŒäºŒä¸Šäººå¾ä½•æ‚£ä¹Žï¼äºŒä¸Šäººå¸ˆäº‹
+æŽå¯¿åºµï¼Œå¯¿åºµå¸ˆäº‹é‚“è±æºªã€‚é‚“è±æºªå¿—å¦‚é‡‘åˆšï¼Œèƒ†å¦‚å¤©å¤§ï¼Œå­¦ä»Žå¿ƒæ‚Ÿï¼Œæ™ºè¿‡äºŽå¸ˆï¼Œæ•…
+æ‰€å–ä¹‹å¾’å¦‚å…¶å¸ˆï¼Œå…¶å¾’å­™å¦‚å…¶å¾’ã€‚å¾ä»¥æ˜¯åœä¹‹ï¼Œè€ŒçŸ¥äºŒä¸Šäººä¹‹å¿…èƒ½å¦‚æˆ‘å‡ºæ°”æ— ç–‘ä¹Ÿï¼Œ
+æ•…ä½œå¥½é«˜å¥½æ´ä¹‹è¯´ä»¥è´»ä¹‹ã€‚
 
-<hr><a href="0_INDEX.html">»ØÄ¿Â¼</a>
+<hr><a href="0_INDEX.html">å›žç›®å½•</a>
 </body></html>
