--- a/ebooks/prose/short_pop/s043.html
+++ b/ebooks/prose/short_pop/s043.html
@@ -1,45 +1,45 @@
 <html><meta http-equiv="Content-Type" content="text/html" charset="gb2312"><BODY BGCOLOR="#FFF4E4">
-<title>½ðÈËÃú</title></head>
+<title>é‡‘äººé“­</title></head>
 <p>
-¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡ ½ðÈËÃú
+ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ é‡‘äººé“­
 <p>
-¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡  »ÆµÛ
+ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€  é»„å¸
 <p>
-¡¡¡¡¡¼ËµÃ÷¡½¡¶ººÊé¡¤ÒÕÎÄÖ¾¡·ÓÐ¡¶»ÆµÛÃú¡·ÁùÆª£¬½ñÒÑÍö¡£¡¶½ðÎÄÃú¡·¾ÝÑ§Õß¿¼
-Ö¤£¬¼´Îª¡¶»ÆµÛÃú¡·ÁùÆªÖ®Ò»£¨ÍõÓ¦ÁÛ¡¶¡´ººÊé¡¤ÒÕÎÄÖ¾¡µ¿¼¡·£©¡£¡¶½ðÎÄÃú¡·ÔØ
-ÁõÏò¡¶ËµÔ·¡¤¾´É÷Æª¡·£º¡°¿××ÓÖ®ÖÜ£¬¹ÛÓÚÌ«Ãí¡£×ó±ÝÖ®Ç°£¬ÓÐ½ðÈËÑÉ¡£Èý¼êÆä¿Ú£¬
-¶øÃûÆä±³Ô»¡±ÔÆÔÆ£¬¡¶¿××Ó¼ÒÓï¡¤¹ÛÖÜ¡·ËùÔØÓë´Ë´óÖÂÏàÍ¬£¬ºÜ¿ÉÄÜ¾Í³­×Ô¡¶ËµÔ·¡·¡£
-ÁõÏòÔÚºº³ÉµÛºÓÆ½ÈýÄê£¨¹«ÔªÇ°£²£¶Äê£©ÒÔ¹âÂ»´ó·òÖ®Ö°ÊÜÚ¯Ð£¾­´«Öî×ÓÊ«¸³£¬±é
-ÀÀ»ÊÊÒ²ØÊé£¬ËùÖø¡¶ËµÔ·¡·±£´æÁË´óÁ¿ÏÈÇØÊ·ÁÏ¡££±£¹£·£³ÄêºÓ±±¶¨ÏØ£´£°ºÅººÄ¹
-³öÍÁÁËÒ»ÅúÖñ¼ò£¬ÆäÖÐÓÐÏÈÇØ¹Å¼®¡¶Èå¼ÒÕßÑÔ¡·£¬Ðí¶àÄÚÈÝ¼ûÓÚ¡¶ËµÔ·¡·£¬×ãÒÔËµ
-Ã÷¡¶ËµÔ·¡·Ö®ÕæÊµ¿ÉÐÅ¡£µÀ¼ÒÏòÀ´±»³ÆÎª»ÆÀÏÖ®Êõ£¬ÒÔ¡¶½ðÈËÃú¡·¶ÔÕÕ¡¶ÀÏ×Ó¡·£¬
-Òà¿ÉÖªÆäÎª¡¶ÀÏ×Ó¡·µÄË¼ÏëÔ´Í·¡£<br>
-¡¡¡¡¹ÅÖ®É÷ÑÔÈËÒ²£¬½äÖ®ÔÕ£¡<br>
-¡¡¡¡ÎÞ¶àÑÔ£¬¶àÑÔ¶à°Ü£»<br>
-¡¡¡¡ÎÞ¶àÊÂ£¬¶àÊÂ¶à»¼¡£<br>
-¡¡¡¡°²ÀÖÒÔ½ä£¬ÎÞÐÐËù»Ú¡£<br>
-¡¡¡¡ÎðÎ½ºÎÉË£¬Æä»ö½«³¤£»<br>
-¡¡¡¡ÎðÎ½ºÎº¦£¬Æä»ö½«´ó£»<br>
-¡¡¡¡ÎðÎ½ºÎ²Ð£¬Æä»ö½«È»¡££¨¡¶¼ÒÓï¡·ÎÞ´Ë¶þ¾ä£©<br>
-¡¡¡¡ÎðÎ½ÄªÎÅ£¬ÌìÑýËÅÈË¡££¨¡¶¼ÒÓï¡·×÷¡°ÎðÎ½²»ÎÅ£¬Éñ½«ËÅÈË¡±£©<br>
-¡¡¡¡Ó«Ó«²»Ãð£¬Ñ×Ñ×ÄÎºÎ£»<br>
-¡¡¡¡ä¸ä¸²»ÛÕ£¬½«³É½­ºÓ£»<br>
-¡¡¡¡ÃàÃà²»¾ø£¬½«³ÉÍøÂÞ£»<br>
-¡¡¡¡ÇàÇà²»·¥£¬½«Ñ°¸«¿Â¡£<br>
-¡¡¡¡³Ï²»ÄÜÉ÷Ö®£¬»öÖ®¸ùÒ²¡££¨¡¶¼ÒÓï¡·×÷¡°³ÏÄÜÉ÷Ö®£¬¸£Ö®¸ùÒ²¡±£©<br>
-¡¡¡¡Ô»ÊÇºÎÉË£¬»öÖ®ÃÅÒ²¡££¨¡°Ô»¡±¡¶¼ÒÓï¡·×÷¡°¿Ú¡±£¬µ±´ÓÖ®£©<br>
-¡¡¡¡Ç¿ÁºÕß²»µÃÆäËÀ£¬ºÃÊ¤Õß±ØÓöÆäµÐ¡£<br>
-¡¡¡¡µÁÔ¹Ö÷ÈË£¬Ãñº¦Æä¹ó¡££¨¡¶¼ÒÓï¡·×÷¡°µÁÔ÷Ö÷ÈË£¬ÃñÔ¹ÆäÉÏ¡±£©<br>
-¡¡¡¡¾ý×ÓÖªÌìÏÂÖ®²»¿É¸ÇÒ²£¬<br>
-¡¡¡¡¹ÊºóÖ®ÏÂÖ®£¬Ê¹ÈËÄ½Ö®¡£<br>
-¡¡¡¡Ö´´Æ³ÖÏÂ£¬ÄªÄÜÓëÖ®ÕùÕß¡£<br>
-¡¡¡¡ÈË½ÔÇ÷±Ë£¬ÎÒ¶ÀÊØ´Ë¡££¨¡°Ç÷¡±¡¶¼ÒÓï¡·×÷¡°È¡¡±£©<br>
-¡¡¡¡ÖÚÈË»ó»ó£¬ÎÒ¶À²»´Ó¡££¨Ç°¾ä¡¶¼ÒÓï¡·×÷¡°ÈË½Ô»óÖ®¡±£¬¡°´Ó¡±×÷¡°áã¡±£©<br>
-¡¡¡¡ÄÚ²ØÎÒÖª£¬²»ÓëÈËÂÛ¼¼¡££¨ºó¾ä¡¶¼ÒÓï¡·×÷¡°²»Ê¾ÈË¼¼¡±£©<br>
-¡¡¡¡ÎÒËä×ð¸ß£¬ÈËÄªº¦ÎÒ¡£<br>
-¡¡¡¡·ò½­ºÓ³¤°Ù¹ÈÕß£¬ÒÔÆä±°ÏÂÒ²¡£<br>
-¡¡¡¡ÌìµÀÎÞÇ×£¬³£ÓëÉÆÈË¡£<br>
-¡¡¡¡½äÖ®ÔÕ£¡½äÖ®ÔÕ£¡
+ã€€ã€€ã€–è¯´æ˜Žã€—ã€Šæ±‰ä¹¦Â·è‰ºæ–‡å¿—ã€‹æœ‰ã€Šé»„å¸é“­ã€‹å…­ç¯‡ï¼Œä»Šå·²äº¡ã€‚ã€Šé‡‘æ–‡é“­ã€‹æ®å­¦è€…è€ƒ
+è¯ï¼Œå³ä¸ºã€Šé»„å¸é“­ã€‹å…­ç¯‡ä¹‹ä¸€ï¼ˆçŽ‹åº”é³žã€Šã€ˆæ±‰ä¹¦Â·è‰ºæ–‡å¿—ã€‰è€ƒã€‹ï¼‰ã€‚ã€Šé‡‘æ–‡é“­ã€‹è½½
+åˆ˜å‘ã€Šè¯´è‹‘Â·æ•¬æ…Žç¯‡ã€‹ï¼šâ€œå­”å­ä¹‹å‘¨ï¼Œè§‚äºŽå¤ªåº™ã€‚å·¦é™›ä¹‹å‰ï¼Œæœ‰é‡‘äººç„‰ã€‚ä¸‰ç¼„å…¶å£ï¼Œ
+è€Œåå…¶èƒŒæ›°â€äº‘äº‘ï¼Œã€Šå­”å­å®¶è¯­Â·è§‚å‘¨ã€‹æ‰€è½½ä¸Žæ­¤å¤§è‡´ç›¸åŒï¼Œå¾ˆå¯èƒ½å°±æŠ„è‡ªã€Šè¯´è‹‘ã€‹ã€‚
+åˆ˜å‘åœ¨æ±‰æˆå¸æ²³å¹³ä¸‰å¹´ï¼ˆå…¬å…ƒå‰ï¼’ï¼–å¹´ï¼‰ä»¥å…‰ç¦„å¤§å¤«ä¹‹èŒå—è¯æ ¡ç»ä¼ è¯¸å­è¯—èµ‹ï¼Œé
+è§ˆçš‡å®¤è—ä¹¦ï¼Œæ‰€è‘—ã€Šè¯´è‹‘ã€‹ä¿å­˜äº†å¤§é‡å…ˆç§¦å²æ–™ã€‚ï¼‘ï¼™ï¼—ï¼“å¹´æ²³åŒ—å®šåŽ¿ï¼”ï¼å·æ±‰å¢“
+å‡ºåœŸäº†ä¸€æ‰¹ç«¹ç®€ï¼Œå…¶ä¸­æœ‰å…ˆç§¦å¤ç±ã€Šå„’å®¶è€…è¨€ã€‹ï¼Œè®¸å¤šå†…å®¹è§äºŽã€Šè¯´è‹‘ã€‹ï¼Œè¶³ä»¥è¯´
+æ˜Žã€Šè¯´è‹‘ã€‹ä¹‹çœŸå®žå¯ä¿¡ã€‚é“å®¶å‘æ¥è¢«ç§°ä¸ºé»„è€ä¹‹æœ¯ï¼Œä»¥ã€Šé‡‘äººé“­ã€‹å¯¹ç…§ã€Šè€å­ã€‹ï¼Œ
+äº¦å¯çŸ¥å…¶ä¸ºã€Šè€å­ã€‹çš„æ€æƒ³æºå¤´ã€‚<br>
+ã€€ã€€å¤ä¹‹æ…Žè¨€äººä¹Ÿï¼Œæˆ’ä¹‹å“‰ï¼<br>
+ã€€ã€€æ— å¤šè¨€ï¼Œå¤šè¨€å¤šè´¥ï¼›<br>
+ã€€ã€€æ— å¤šäº‹ï¼Œå¤šäº‹å¤šæ‚£ã€‚<br>
+ã€€ã€€å®‰ä¹ä»¥æˆ’ï¼Œæ— è¡Œæ‰€æ‚”ã€‚<br>
+ã€€ã€€å‹¿è°“ä½•ä¼¤ï¼Œå…¶ç¥¸å°†é•¿ï¼›<br>
+ã€€ã€€å‹¿è°“ä½•å®³ï¼Œå…¶ç¥¸å°†å¤§ï¼›<br>
+ã€€ã€€å‹¿è°“ä½•æ®‹ï¼Œå…¶ç¥¸å°†ç„¶ã€‚ï¼ˆã€Šå®¶è¯­ã€‹æ— æ­¤äºŒå¥ï¼‰<br>
+ã€€ã€€å‹¿è°“èŽ«é—»ï¼Œå¤©å¦–ä¼ºäººã€‚ï¼ˆã€Šå®¶è¯­ã€‹ä½œâ€œå‹¿è°“ä¸é—»ï¼Œç¥žå°†ä¼ºäººâ€ï¼‰<br>
+ã€€ã€€è§è§ä¸ç­ï¼Œç‚Žç‚Žå¥ˆä½•ï¼›<br>
+ã€€ã€€æ¶“æ¶“ä¸å£…ï¼Œå°†æˆæ±Ÿæ²³ï¼›<br>
+ã€€ã€€ç»µç»µä¸ç»ï¼Œå°†æˆç½‘ç½—ï¼›<br>
+ã€€ã€€é’é’ä¸ä¼ï¼Œå°†å¯»æ–§æŸ¯ã€‚<br>
+ã€€ã€€è¯šä¸èƒ½æ…Žä¹‹ï¼Œç¥¸ä¹‹æ ¹ä¹Ÿã€‚ï¼ˆã€Šå®¶è¯­ã€‹ä½œâ€œè¯šèƒ½æ…Žä¹‹ï¼Œç¦ä¹‹æ ¹ä¹Ÿâ€ï¼‰<br>
+ã€€ã€€æ›°æ˜¯ä½•ä¼¤ï¼Œç¥¸ä¹‹é—¨ä¹Ÿã€‚ï¼ˆâ€œæ›°â€ã€Šå®¶è¯­ã€‹ä½œâ€œå£â€ï¼Œå½“ä»Žä¹‹ï¼‰<br>
+ã€€ã€€å¼ºæ¢è€…ä¸å¾—å…¶æ­»ï¼Œå¥½èƒœè€…å¿…é‡å…¶æ•Œã€‚<br>
+ã€€ã€€ç›—æ€¨ä¸»äººï¼Œæ°‘å®³å…¶è´µã€‚ï¼ˆã€Šå®¶è¯­ã€‹ä½œâ€œç›—æ†Žä¸»äººï¼Œæ°‘æ€¨å…¶ä¸Šâ€ï¼‰<br>
+ã€€ã€€å›å­çŸ¥å¤©ä¸‹ä¹‹ä¸å¯ç›–ä¹Ÿï¼Œ<br>
+ã€€ã€€æ•…åŽä¹‹ä¸‹ä¹‹ï¼Œä½¿äººæ…•ä¹‹ã€‚<br>
+ã€€ã€€æ‰§é›ŒæŒä¸‹ï¼ŒèŽ«èƒ½ä¸Žä¹‹äº‰è€…ã€‚<br>
+ã€€ã€€äººçš†è¶‹å½¼ï¼Œæˆ‘ç‹¬å®ˆæ­¤ã€‚ï¼ˆâ€œè¶‹â€ã€Šå®¶è¯­ã€‹ä½œâ€œå–â€ï¼‰<br>
+ã€€ã€€ä¼—äººæƒ‘æƒ‘ï¼Œæˆ‘ç‹¬ä¸ä»Žã€‚ï¼ˆå‰å¥ã€Šå®¶è¯­ã€‹ä½œâ€œäººçš†æƒ‘ä¹‹â€ï¼Œâ€œä»Žâ€ä½œâ€œå¾™â€ï¼‰<br>
+ã€€ã€€å†…è—æˆ‘çŸ¥ï¼Œä¸ä¸Žäººè®ºæŠ€ã€‚ï¼ˆåŽå¥ã€Šå®¶è¯­ã€‹ä½œâ€œä¸ç¤ºäººæŠ€â€ï¼‰<br>
+ã€€ã€€æˆ‘è™½å°Šé«˜ï¼ŒäººèŽ«å®³æˆ‘ã€‚<br>
+ã€€ã€€å¤«æ±Ÿæ²³é•¿ç™¾è°·è€…ï¼Œä»¥å…¶å‘ä¸‹ä¹Ÿã€‚<br>
+ã€€ã€€å¤©é“æ— äº²ï¼Œå¸¸ä¸Žå–„äººã€‚<br>
+ã€€ã€€æˆ’ä¹‹å“‰ï¼æˆ’ä¹‹å“‰ï¼
 
-<hr><a href="0_INDEX.html">»ØÄ¿Â¼</a>
+<hr><a href="0_INDEX.html">å›žç›®å½•</a>
 </body></html>
