--- a/ebooks/prose/short_pop/t006.html
+++ b/ebooks/prose/short_pop/t006.html
@@ -1,18 +1,18 @@
 <html><meta http-equiv="Content-Type" content="text/html" charset="gb2312"><BODY BGCOLOR="#FFF4E4"><TITLE></TITLE>
-<CENTER>»ÆµÛÒõ·û¾­£¨½ÚÑ¡£©</CENTER><BR>
+<CENTER>é»„å¸é˜´ç¬¦ç»ï¼ˆèŠ‚é€‰ï¼‰</CENTER><BR>
 <CENTER></CENTER>
 <p>
-¡¡¡¡¹ÛÌìÖ®µÀ£¬Ö´ÌìÖ®ÐÐ£¬¾¡ÒÓ¡£ÌìÓÐÎåÔô£¬¼ûÖ®Õß²ý¡£ÎåÔôÔÚÐÄ£¬Ê©ÐÐÓÚÌì£¬ÓîÖæÔÚ ºõ
-ÊÖ£¬ÍòÎïÉúºõÉí¡£<p>
-¡¡¡¡ÌìÐÔ£¬ÈËÒ²£»ÈËÐÄ£¬»úÒ²£»Á¢ÌìÖ®µÀÒÔ¶¨ÈËÒ²¡£<p>
-¡¡¡¡Ìì·¢É±»ú£¬¶·×ªÐÇÒÆ£»µØ·¢É±»ú£¬ÁúÉßÆðÂ½£»ÈË·¢É±»ú£¬ÌìµØ·´¸²£»ÌìÈËºÏ·¢£¬Íò»¯¶¨
-»ù¡£<p>
-¡¡¡¡ÐÔÓÐÇÉ×¾£¬¿ÉÒÔ·ü²Ø¡£¾ÅÇÏÖ®Ð°£¬ÔÚºõÈýÒª¡£¿ÉÒÔ¶¯¾²¡£»ðÉúÓÚÄ¾£¬»ö·¢±Ø ¿Ë£¬¼éÉú
-ÓÚ¹ú£¬Ê±¶¯±ØÀ££»ÖªÖ®ÐÞÁ·£¬Î½Ö®Ê¥ÈË¡£<p>
-¡¡¡¡ÌìµØÍòÎïÖ®µÁ£»ÍòÎïÈËÖ®µÁ£»ÈËÍòÎïÖ®µÁÒ²¡£ÈýµÁ¼ÈÒË£¬Èý²Å¼È°²¡£¹ÊÔ»£ºÊ³ÆäÊ±£¬°Ù
-º¡Àí£»¶¯Æä»ú£¬Íò»¯°²¡£ÈËÖªÆäÉñ¶øÉñ£¬²»ÖªÆä²»ÉñÖ®ËùÒÔÉñ¡£ÈÕÔÂÓÐÊý£¬´óÐ¡ÓÐ¶¨£¬Ê¥¹¦
-ÉúÑÉ£¬ÉñÃ÷³öÑÉ¡£ÆäµÁ»úÒ²£¬ÌìÏÂÄª²»ÄÜ¼û£¬Äª²»ÄÜÖª¡£¾ý×ÓµÃÖ®¹Ì¹ª£¬Ð¡ÈËµÃÖ®ÇáÃü¡£<p>
-¡¡¡¡î­ÕßÉÆÌý£¬ÁûÕßÉÆÊÓ¡£¾øÀûÒ»Ô´£¬ÓÃÊ¦Ê®±¶£»Èý·´ÖçÒ¹£¬ÓÃÊ¦Íò±¶¡£ÐÄÉúÓÚÎï£¬ËÀÓÚ
-Îï£¬»úÔÚÄ¿¡£ÌìÖ®ÎÞ¶÷¶ø¶÷Éú£¬Ñ¸À×ÁÒ·ç£¬Äª²»´ÀÈ»¡£<p>
-¡¡¡¡ÖÁÀÖÐÔÓà£¬ÖÁ¾²ÔòÁ®¡£ÌìÖ®ÖÁË½£¬ÓÃÖ®ÖÁ¹«¡£ÃüÖ®ÖÆÔÚÆø¡£ËÀÕßÉúÖ®¸ù£¬ÉúÕßËÀÖ®¸ù¡£
-¶÷ÉúÓÚº¦£¬º¦ÓÚ¶÷¡£ÓÞÈËÒÔÌìµØÎÄÀíÊ¥£¬ÎÒÒÔÊ±ÎïÎÄÀíÕÜ¡£
+ã€€ã€€è§‚å¤©ä¹‹é“ï¼Œæ‰§å¤©ä¹‹è¡Œï¼Œå°½çŸ£ã€‚å¤©æœ‰äº”è´¼ï¼Œè§ä¹‹è€…æ˜Œã€‚äº”è´¼åœ¨å¿ƒï¼Œæ–½è¡ŒäºŽå¤©ï¼Œå®‡å®™åœ¨ ä¹Ž
+æ‰‹ï¼Œä¸‡ç‰©ç”Ÿä¹Žèº«ã€‚<p>
+ã€€ã€€å¤©æ€§ï¼Œäººä¹Ÿï¼›äººå¿ƒï¼Œæœºä¹Ÿï¼›ç«‹å¤©ä¹‹é“ä»¥å®šäººä¹Ÿã€‚<p>
+ã€€ã€€å¤©å‘æ€æœºï¼Œæ–—è½¬æ˜Ÿç§»ï¼›åœ°å‘æ€æœºï¼Œé¾™è›‡èµ·é™†ï¼›äººå‘æ€æœºï¼Œå¤©åœ°åè¦†ï¼›å¤©äººåˆå‘ï¼Œä¸‡åŒ–å®š
+åŸºã€‚<p>
+ã€€ã€€æ€§æœ‰å·§æ‹™ï¼Œå¯ä»¥ä¼è—ã€‚ä¹çªä¹‹é‚ªï¼Œåœ¨ä¹Žä¸‰è¦ã€‚å¯ä»¥åŠ¨é™ã€‚ç«ç”ŸäºŽæœ¨ï¼Œç¥¸å‘å¿… å…‹ï¼Œå¥¸ç”Ÿ
+äºŽå›½ï¼Œæ—¶åŠ¨å¿…æºƒï¼›çŸ¥ä¹‹ä¿®ç»ƒï¼Œè°“ä¹‹åœ£äººã€‚<p>
+ã€€ã€€å¤©åœ°ä¸‡ç‰©ä¹‹ç›—ï¼›ä¸‡ç‰©äººä¹‹ç›—ï¼›äººä¸‡ç‰©ä¹‹ç›—ä¹Ÿã€‚ä¸‰ç›—æ—¢å®œï¼Œä¸‰æ‰æ—¢å®‰ã€‚æ•…æ›°ï¼šé£Ÿå…¶æ—¶ï¼Œç™¾
+éª¸ç†ï¼›åŠ¨å…¶æœºï¼Œä¸‡åŒ–å®‰ã€‚äººçŸ¥å…¶ç¥žè€Œç¥žï¼Œä¸çŸ¥å…¶ä¸ç¥žä¹‹æ‰€ä»¥ç¥žã€‚æ—¥æœˆæœ‰æ•°ï¼Œå¤§å°æœ‰å®šï¼Œåœ£åŠŸ
+ç”Ÿç„‰ï¼Œç¥žæ˜Žå‡ºç„‰ã€‚å…¶ç›—æœºä¹Ÿï¼Œå¤©ä¸‹èŽ«ä¸èƒ½è§ï¼ŒèŽ«ä¸èƒ½çŸ¥ã€‚å›å­å¾—ä¹‹å›ºèº¬ï¼Œå°äººå¾—ä¹‹è½»å‘½ã€‚<p>
+ã€€ã€€çž½è€…å–„å¬ï¼Œè‹è€…å–„è§†ã€‚ç»åˆ©ä¸€æºï¼Œç”¨å¸ˆåå€ï¼›ä¸‰åæ˜¼å¤œï¼Œç”¨å¸ˆä¸‡å€ã€‚å¿ƒç”ŸäºŽç‰©ï¼Œæ­»äºŽ
+ç‰©ï¼Œæœºåœ¨ç›®ã€‚å¤©ä¹‹æ— æ©è€Œæ©ç”Ÿï¼Œè¿…é›·çƒˆé£Žï¼ŒèŽ«ä¸è ¢ç„¶ã€‚<p>
+ã€€ã€€è‡³ä¹æ€§ä½™ï¼Œè‡³é™åˆ™å»‰ã€‚å¤©ä¹‹è‡³ç§ï¼Œç”¨ä¹‹è‡³å…¬ã€‚å‘½ä¹‹åˆ¶åœ¨æ°”ã€‚æ­»è€…ç”Ÿä¹‹æ ¹ï¼Œç”Ÿè€…æ­»ä¹‹æ ¹ã€‚
+æ©ç”ŸäºŽå®³ï¼Œå®³äºŽæ©ã€‚æ„šäººä»¥å¤©åœ°æ–‡ç†åœ£ï¼Œæˆ‘ä»¥æ—¶ç‰©æ–‡ç†å“²ã€‚
