--- a/ebooks/prose/short_pop/u006.html
+++ b/ebooks/prose/short_pop/u006.html
@@ -1,84 +1,84 @@
 <html><meta http-equiv="Content-Type" content="text/html" charset="gb2312"><BODY BGCOLOR="#FFF4E4">
-<title>Ç§×ÖÎÄ</title></head>
+<title>åƒå­—æ–‡</title></head>
 <p>
-¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡ Ç§×ÖÎÄ
+ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ åƒå­—æ–‡
 <p>
-¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡ ÖÜÐËËÃ<br>
-¡¡¡¡
-¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡   £ÛÁ»£Ý¡¡ë·Ô±ÍâÉ¢ÆïÊÌÀÉ¡¡ÖÜÐËËÃ¡¡×«<br>
-¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡   £ÛµÚÈý¹²ºÍ£Ý¡¡ÙÔåÐÒ£ÓÎÉú¡¡²½³Á¡¡³®
+ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€ å‘¨å…´å—£<br>
+ã€€ã€€
+ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€   ï¼»ç²±ï¼½ã€€æ••å‘˜å¤–æ•£éª‘ä¾éƒŽã€€å‘¨å…´å—£ã€€æ’°<br>
+ã€€ã€€ã€€ã€€ã€€ã€€ã€€ã€€   ï¼»ç¬¬ä¸‰å…±å’Œï¼½ã€€åƒ­é€é¥æ¸¸ç”Ÿã€€æ­¥æ²‰ã€€é’ž
 <p>
-¡¡¡¡ÌìµØÐþ»Æ¡¡ÓîÖæºé»Ä¡¡ÈÕÔÂÓ¯ê¾¡¡³½ËÞÁÐÕÅ¡¡º®À´ÊîÍù¡¡ÇïÊÕ¶¬²Ø<br>
-¡¡¡¡ÈòâÅ³ÉËê¡¡ÂÉÂÀµ÷Ñô¡¡ÔÆÌÚÖÂÓê¡¡Â¶½áÎªËª¡¡½ðÉúÀöË®¡¡Óñ³öÀ¥¸Ô<br>
-¡¡¡¡½£ºÅ¾ÞãÚ¡¡Öé³ÆÒ¹¹â¡¡¹ûÕäÀîèÍ¡¡²ËÖØ½æ½ª¡¡º£ÏÌºÓµ­¡¡ÁÛÇ±ÓðÏè<br>
-¡¡¡¡ÁúÊ¦»ðµÛ¡¡Äñ¹ÙÈË»Ê¡¡Ê¼ÖÆÎÄ×Ö¡¡ÄË·þÒÂÉÑ¡¡ÍÆÎ»ÈÃ¹ú¡¡ÓÐÓÝÌÕÌÆ<br>
-¡¡¡¡µõÃñ·¥×ï¡¡ÖÜ·¢ÒóÌÀ¡¡×ø³¯ÎÊµÀ¡¡´¹¹°Æ½ÕÂ¡¡°®ÓýÀèÊ×¡¡³¼·üÈÖÇ¼<br>
-¡¡¡¡åÚåÇÒ»Ìå¡¡ÂÊ±ö¹éÍõ¡¡Ãù·ïÔÚÖñ¡¡°×¾ÔÊ³³¡¡¡»¯±»²ÝÄ¾¡¡Àµ¼°Íò·½<br>
-¡¡¡¡¸Ç´ËÉí·¢¡¡ËÄ´óÎå³£¡¡¹§Î©¾ÏÑø¡¡Æñ¸Ò»ÙÉË¡¡Å®Ä½Õê½à¡¡ÄÐÐ§²ÅÁ¼<br>
-¡¡¡¡Öª¹ý±Ø¸Ä¡¡µÃÄÜÄªÍü¡¡ØèÌ¸±Ë¶Ì¡¡ÃÒÊÑ¼º³¤¡¡ÐÅÊ¹¿É¸´¡¡Æ÷ÓûÄÑÁ¿<br>
-¡¡¡¡Ä«±¯Ë¿È¾¡¡Ê«ÔÞ¸áÑò¡¡¾°ÐÐÎ¬ÏÍ¡¡¿ËÄî×÷Ê¥¡¡µÂ½¨ÃûÁ¢¡¡ÐÎ¶Ë±íÕý<br>
-¡¡¡¡¿Õ¹È´«Éù¡¡ÐéÌÃÏ°Ìý¡¡»öÒò¶ñ»ý¡¡¸£ÔµÉÆÇì¡¡³ßèµ·Ç±¦¡¡´çÒõÊÇ¾º<br>
-¡¡¡¡×Ê¸¸ÊÂ¾ý¡¡Ô»ÑÏÓë¾´¡¡Ð¢µ±½ßÁ¦¡¡ÖÒÔò¾¡Ãü¡¡ÁÙÉîÂÄ±¡¡¡ÙíÐËÎÂ¢Ù<br>
-¡¡¡¡ËÆÀ¼Ë¹Ü°¡¡ÈçËÉÖ®Ê¢¡¡´¨Á÷²»Ï¢¡¡Ô¨³ÎÈ¡Ó³¡¡ÈÝÖ¹ÈôË¼¡¡ÑÔ´Ç°²¶¨<br>
-¡¡¡¡óÆ³õ³ÏÃÀ¡¡É÷ÖÕÒËÁî¡¡ÈÙÒµËù»ù¡¡¼®ÉõÎÞ¾¹¡¡Ñ§ÓÅµÇÊË¡¡ÉãÖ°´ÓÕþ<br>
-¡¡¡¡´æÒÔ¸ÊÌÄ¡¡È¥¶øÒæÓ½¡¡ÀÖÊâ¹ó¼ú¡¡Àñ±ð×ð±°¡¡ÉÏºÍÏÂÄÀ¡¡·ò³ª¸¾Ëæ<br>
-¡¡¡¡ÍâÊÜ¸µÑµ¡¡Èë·îÄ¸ÒÇ¡¡Öî¹Ã²®Êå¡¡ÓÌ×Ó±È¶ù¡¡¿×»³ÐÖµÜ¡¡Í¬ÆøÁ¬Ö¦<br>
-¡¡¡¡½»ÓÑÍ¶·Ö¡¡ÇÐÄ¥óð¹æ¡¡ÈÊ´ÈÒþâü¡¡Ôì´Î¸¥Àë¡¡½ÚÒåÁ®ÍË¡¡µßÅæ·Ë¿÷<br>
-¡¡¡¡ÐÔ¾²ÇéÒÝ¡¡ÐÄ¶¯ÉñÆ£¡¡ÊØÕæÖ¾Âú¡¡ÖðÎïÒâÒÆ¡¡¼á³ÖÑÅ²Ù¡¡ºÃ¾ô×Ô÷ã<br>
-¡¡¡¡¶¼ÒØ»ªÏÄ¡¡¶«Î÷¶þ¾©¡¡±³ÚøÃæÂå¡¡¸¡Î¼¾Ýãþ¡¡¹¬µîÅÌÓô¡¡Â¥¹Û·É¾ª<br>
-¡¡¡¡Í¼Ð´ÇÝÊÞ¡¡»­²ÊÏÉÁé¡¡±ûÉá°øÆô¡¡¼×ÕÊ¶Ôéº¡¡ËÁóÛÉèÏ¯¡¡¹ÄÉª´µóÏ<br>
-¡¡¡¡Éý½×ÄÉ±Ý¡¡ÛÍ×ªÒÉÐÇ¡¡ÓÒÍ¨¹ãÄÚ¡¡×ó´ï³ÐÃ÷¡¡¼È¼¯·Øµä¡¡Òà¾ÛÈºÓ¢<br>
-¡¡¡¡¶Å¸åÖÓÁ¥¡¡ÆáÊé±Ú¾­¡¡¸®ÂÞ½«Ïà¡¡Â·ÏÀ»±Çä¡¡»§·â°ËÏØ¡¡¼Ò¸øÇ§±ø<br>
-¡¡¡¡¸ß¹ÚÅãéý¡¡Çýì±ÕñÓ§¡¡ÊÀÂ»³Þ¸»¡¡³µ¼Ý·ÊÇá¡¡²ß¹¦Ã¯Êµ¡¡ÀÕ±®¿ÌÃú<br>
-¡¡¡¡¢ÚÏªÒÁÒü¡¡×ôÊ±°¢ºâ¡¡ÑÙÕ¬Çú¸·¡¡Î¢µ©ÊëÓª¡¡»¸¹«¿ïºÏ¡¡¼ÃÈõ·öÇã<br>
-¡¡¡¡ç²»Øºº»Ý¡¡Ëµ¸ÐÎä¶¡¡¡¿¡¢ÛÃÜÎð¡¡¶àÊ¿¢ÜÄþ¡¡½ú³þ¸ü°Ô¡¡ÕÔÎºÀ§ºá<br>
-¡¡¡¡¼ÙÍ¾Ãðë½¡¡¼ùÍÁ»áÃË¡¡ºÎ×ñÔ¼·¨¡¡º«±×·³ÐÌ¡¡ÆðôåÆÄÄÁ¡¡ÓÃ¾ü×î¾«<br>
-¡¡¡¡ÐûÍþÉ³Ä®¡¡³ÛÓþµ¤Çà¡¡¾ÅÖÝÓí¼£¡¡°Ù¿¤ÇØ²¢¡¡ÔÀ×ÚÌ©á·¡¡ìøÖ÷ÔÆÍ¤<br>
-¡¡¡¡ÑãÃÅ×ÏÈû¡¡¼¦Ìï³à³Ç¡¡À¥³ØíÙÊ¯¡¡¾ÞÒ°¶´Í¥¡¡¿õÔ¶Ãàåã¡¡ÑÒá¶èÃÚ¤<br>
-¡¡¡¡ÖÎ±¾ÓÚÅ©¡¡Îñ×Ê¼Úð£¡¡¢ÝÔØÄÏÄ¶¡¡ÎÒÒÕÊòð¢¡¡Ë°Êì¹±ÐÂ¡¡È°ÉÍ÷íÚì<br>
-¡¡¡¡ÃÏéð¶ØËØ¡¡Ê·Óã±üÖ±¡¡Êü¼¸ÖÐÓ¹¡¡ÀÍÇ«½÷ë·¡¡ñöÒô²ìÀí¡¡¼øÃ²±æÉ«<br>
-¡¡¡¡êÝØÊ¼Îéà¡¡ÃãÆäìóÖ²¡¡Ê¡¹ª¼¥½ë¡¡³èÔö¿¹¼«¡¡´ùÈè½ü³Ü¡¡ÁÖ¸ÞÐÒ¼´<br>
-¡¡¡¡Á½Êè¼û»ú¡¡½â×éË­±Æ¡¡Ë÷¾ÓÏÐ´¦¡¡³ÁÄ¬¼ÅÁÈ¡¡Çó¹ÅÑ°ÂÛ¡¡É¢ÂÇåÐÒ£<br>
-¡¡¡¡ÐÀ×àÀÛÇ²¡¡ÆÝÐ»»¶ÕÐ¡¡ÇþºÉµÄÀú¡¡Ô°Ã§³éÌõ¡¡èÁèËÍí´ä¡¡ÎàÍ©Ôéµò<br>
-¡¡¡¡³Â¸ùÎ¯ôè¡¡ÂäÒ¶Æ®Ò¡¡¡ÓÎ¢Þ¶ÀÔË¡¡ÁèÄ¦ç­Ïö¡¡µ¢¶ÁÍæÊÐ¡¡Ô¢Ä¿ÄÒÏä<br>
-¡¡¡¡Ò×¢ßØüÎ·¡¡Êô¶úÔ«Ç½¡¡¾ßÉÅ²Í·¹¡¡ÊÊ¿Ú³ä³¦¡¡±¥âÀÅëÔ×¡¡¼¢ÑáÔã¿·<br>
-¡¡¡¡Ç×ÆÝ¹Ê¾É¡¡ÀÏÉÙÒìÁ¸¡¡æªÓù¼¨·Ä¡¡ÊÌ½íá¡·¿¡¡æýÉÈÔ²¢à¡¡ÒøÖòì¿»Í<br>
-¡¡¡¡ÖçÃßÏ¦ÃÂ¡¡À¶ËñÏó´²¡¡ÏÒ¸è¾ÆÑç¡¡½Ó±­¾Ùõü¡¡½ÃÊÖ¶Ù×ã¡¡ÔÃÔ¥ÇÒ¿µ<br>
-¡¡¡¡µÕºóËÃÐø¡¡¼Àìë¢á³¢¡¡»üòªÔÙ°Ý¡¡ã¤¾å¿Ö»Ì¡¡¼ãëº¼òÒª¡¡¹Ë´ðÉóÏê<br>
-¡¡¡¡º¡¹¸ÏëÔ¡¡¡Ö´ÈÈÔ¸Á¹¡¡Â¿Ââ¶¿ÌØ¡¡º§Ô¾³¬æø¡¡ÖïÕ¶ÔôµÁ¡¡²¶»ñÅÑÍö<br>
-¡¡¡¡²¼ÉäÁÅÍè¡¡ïúÇÙÈîÐ¥¡¡Ìñ±ÊÂ×Ö½¡¡¾ûÇÉÈÎµö¡¡ÊÍ·×ÀûË×¡¡¢â½Ô¼ÑÃî<br>
-¡¡¡¡Ã«Ê©Êç×Ë¡¡¹¤ò­åûÐ¦¡¡ÄêÊ¸Ã¿´ß¡¡êØêÍÀÊê×¡¡è¯çáÐüÎÓ¡¡»ÞÆÇ»·ÕÕ<br>
-¡¡¡¡Ö¸Ð½ÐÞìï¡¡ÓÀËç¼ªÛ¿¡¡¾Ø²½ÒýÁì¡¡¸©ÑöÀÈÃí¡¡Êø´øñæ×¯¡¡ÅÇ»²Õ°Ì÷<br>
-¡¡¡¡¹ÂÂª¹ÑÎÅ¡¡ÓÞÃÉµÈÚ½¡¡Î½ÓïÖúÕß¡¡ÑÉÔÕºõÒ²
+ã€€ã€€å¤©åœ°çŽ„é»„ã€€å®‡å®™æ´ªè’ã€€æ—¥æœˆç›ˆæ˜ƒã€€è¾°å®¿åˆ—å¼ ã€€å¯’æ¥æš‘å¾€ã€€ç§‹æ”¶å†¬è—<br>
+ã€€ã€€é—°é¦€æˆå²ã€€å¾‹å•è°ƒé˜³ã€€äº‘è…¾è‡´é›¨ã€€éœ²ç»“ä¸ºéœœã€€é‡‘ç”Ÿä¸½æ°´ã€€çŽ‰å‡ºæ˜†å†ˆ<br>
+ã€€ã€€å‰‘å·å·¨é˜™ã€€ç ç§°å¤œå…‰ã€€æžœçæŽæŸ°ã€€èœé‡èŠ¥å§œã€€æµ·å’¸æ²³æ·¡ã€€é³žæ½œç¾½ç¿”<br>
+ã€€ã€€é¾™å¸ˆç«å¸ã€€é¸Ÿå®˜äººçš‡ã€€å§‹åˆ¶æ–‡å­—ã€€ä¹ƒæœè¡£è£³ã€€æŽ¨ä½è®©å›½ã€€æœ‰è™žé™¶å”<br>
+ã€€ã€€åŠæ°‘ä¼ç½ªã€€å‘¨å‘æ®·æ±¤ã€€åæœé—®é“ã€€åž‚æ‹±å¹³ç« ã€€çˆ±è‚²é»Žé¦–ã€€è‡£ä¼æˆŽç¾Œ<br>
+ã€€ã€€éè¿©ä¸€ä½“ã€€çŽ‡å®¾å½’çŽ‹ã€€é¸£å‡¤åœ¨ç«¹ã€€ç™½é©¹é£Ÿåœºã€€åŒ–è¢«è‰æœ¨ã€€èµ–åŠä¸‡æ–¹<br>
+ã€€ã€€ç›–æ­¤èº«å‘ã€€å››å¤§äº”å¸¸ã€€æ­æƒŸéž å…»ã€€å²‚æ•¢æ¯ä¼¤ã€€å¥³æ…•è´žæ´ã€€ç”·æ•ˆæ‰è‰¯<br>
+ã€€ã€€çŸ¥è¿‡å¿…æ”¹ã€€å¾—èƒ½èŽ«å¿˜ã€€ç½”è°ˆå½¼çŸ­ã€€é¡æƒå·±é•¿ã€€ä¿¡ä½¿å¯å¤ã€€å™¨æ¬²éš¾é‡<br>
+ã€€ã€€å¢¨æ‚²ä¸æŸ“ã€€è¯—èµžç¾”ç¾Šã€€æ™¯è¡Œç»´è´¤ã€€å…‹å¿µä½œåœ£ã€€å¾·å»ºåç«‹ã€€å½¢ç«¯è¡¨æ­£<br>
+ã€€ã€€ç©ºè°·ä¼ å£°ã€€è™šå ‚ä¹ å¬ã€€ç¥¸å› æ¶ç§¯ã€€ç¦ç¼˜å–„åº†ã€€å°ºç’§éžå®ã€€å¯¸é˜´æ˜¯ç«ž<br>
+ã€€ã€€èµ„çˆ¶äº‹å›ã€€æ›°ä¸¥ä¸Žæ•¬ã€€å­å½“ç«­åŠ›ã€€å¿ åˆ™å°½å‘½ã€€ä¸´æ·±å±¥è–„ã€€å¤™å…´æ¸©â‘ <br>
+ã€€ã€€ä¼¼å…°æ–¯é¦¨ã€€å¦‚æ¾ä¹‹ç››ã€€å·æµä¸æ¯ã€€æ¸Šæ¾„å–æ˜ ã€€å®¹æ­¢è‹¥æ€ã€€è¨€è¾žå®‰å®š<br>
+ã€€ã€€ç¬ƒåˆè¯šç¾Žã€€æ…Žç»ˆå®œä»¤ã€€è£ä¸šæ‰€åŸºã€€ç±ç”šæ— ç«Ÿã€€å­¦ä¼˜ç™»ä»•ã€€æ‘„èŒä»Žæ”¿<br>
+ã€€ã€€å­˜ä»¥ç”˜æ£ ã€€åŽ»è€Œç›Šå’ã€€ä¹æ®Šè´µè´±ã€€ç¤¼åˆ«å°Šå‘ã€€ä¸Šå’Œä¸‹ç¦ã€€å¤«å”±å¦‡éš<br>
+ã€€ã€€å¤–å—å‚…è®­ã€€å…¥å¥‰æ¯ä»ªã€€è¯¸å§‘ä¼¯å”ã€€çŠ¹å­æ¯”å„¿ã€€å­”æ€€å…„å¼Ÿã€€åŒæ°”è¿žæž<br>
+ã€€ã€€äº¤å‹æŠ•åˆ†ã€€åˆ‡ç£¨ç®´è§„ã€€ä»æ…ˆéšæ»ã€€é€ æ¬¡å¼—ç¦»ã€€èŠ‚ä¹‰å»‰é€€ã€€é¢ æ²›åŒªäº<br>
+ã€€ã€€æ€§é™æƒ…é€¸ã€€å¿ƒåŠ¨ç¥žç–²ã€€å®ˆçœŸå¿—æ»¡ã€€é€ç‰©æ„ç§»ã€€åšæŒé›…æ“ã€€å¥½çˆµè‡ªç¸»<br>
+ã€€ã€€éƒ½é‚‘åŽå¤ã€€ä¸œè¥¿äºŒäº¬ã€€èƒŒé‚™é¢æ´›ã€€æµ®æ¸­æ®æ³¾ã€€å®«æ®¿ç›˜éƒã€€æ¥¼è§‚é£žæƒŠ<br>
+ã€€ã€€å›¾å†™ç¦½å…½ã€€ç”»å½©ä»™çµã€€ä¸™èˆå‚å¯ã€€ç”²å¸å¯¹æ¥¹ã€€è‚†ç­µè®¾å¸­ã€€é¼“ç‘Ÿå¹ç¬™<br>
+ã€€ã€€å‡é˜¶çº³é™›ã€€å¼è½¬ç–‘æ˜Ÿã€€å³é€šå¹¿å†…ã€€å·¦è¾¾æ‰¿æ˜Žã€€æ—¢é›†åŸå…¸ã€€äº¦èšç¾¤è‹±<br>
+ã€€ã€€æœç¨¿é’Ÿéš¶ã€€æ¼†ä¹¦å£ç»ã€€åºœç½—å°†ç›¸ã€€è·¯ä¾ æ§å¿ã€€æˆ·å°å…«åŽ¿ã€€å®¶ç»™åƒå…µ<br>
+ã€€ã€€é«˜å† é™ªè¾‡ã€€é©±æ¯‚æŒ¯ç¼¨ã€€ä¸–ç¦„ä¾ˆå¯Œã€€è½¦é©¾è‚¥è½»ã€€ç­–åŠŸèŒ‚å®žã€€å‹’ç¢‘åˆ»é“­<br>
+ã€€ã€€â‘¡æºªä¼Šå°¹ã€€ä½æ—¶é˜¿è¡¡ã€€å¥„å®…æ›²é˜œã€€å¾®æ—¦å­°è¥ã€€æ¡“å…¬åŒ¡åˆã€€æµŽå¼±æ‰¶å€¾<br>
+ã€€ã€€ç»®å›žæ±‰æƒ ã€€è¯´æ„Ÿæ­¦ä¸ã€€ä¿Šâ‘¢å¯†å‹¿ã€€å¤šå£«â‘£å®ã€€æ™‹æ¥šæ›´éœ¸ã€€èµµé­å›°æ¨ª<br>
+ã€€ã€€å‡é€”ç­è™¢ã€€è·µåœŸä¼šç›Ÿã€€ä½•éµçº¦æ³•ã€€éŸ©å¼Šçƒ¦åˆ‘ã€€èµ·ç¿¦é¢‡ç‰§ã€€ç”¨å†›æœ€ç²¾<br>
+ã€€ã€€å®£å¨æ²™æ¼ ã€€é©°èª‰ä¸¹é’ã€€ä¹å·žç¦¹è¿¹ã€€ç™¾éƒ¡ç§¦å¹¶ã€€å²³å®—æ³°å²±ã€€ç¦…ä¸»äº‘äº­<br>
+ã€€ã€€é›é—¨ç´«å¡žã€€é¸¡ç”°èµ¤åŸŽã€€æ˜†æ± ç¢£çŸ³ã€€å·¨é‡Žæ´žåº­ã€€æ—·è¿œç»µé‚ˆã€€å²©å²«æ³å†¥<br>
+ã€€ã€€æ²»æœ¬äºŽå†œã€€åŠ¡èµ„ç¨¼ç©‘ã€€â‘¤è½½å—äº©ã€€æˆ‘è‰ºé»ç¨·ã€€ç¨Žç†Ÿè´¡æ–°ã€€åŠèµé»œé™Ÿ<br>
+ã€€ã€€å­Ÿè½²æ•¦ç´ ã€€å²é±¼ç§‰ç›´ã€€åº¶å‡ ä¸­åº¸ã€€åŠ³è°¦è°¨æ••ã€€è†éŸ³å¯Ÿç†ã€€é‰´è²Œè¾¨è‰²<br>
+ã€€ã€€è´»åŽ¥å˜‰çŒ·ã€€å‹‰å…¶ç¥—æ¤ã€€çœèº¬è®¥è¯«ã€€å® å¢žæŠ—æžã€€æ®†è¾±è¿‘è€»ã€€æž—çš‹å¹¸å³<br>
+ã€€ã€€ä¸¤ç–è§æœºã€€è§£ç»„è°é€¼ã€€ç´¢å±…é—²å¤„ã€€æ²‰é»˜å¯‚å¯¥ã€€æ±‚å¤å¯»è®ºã€€æ•£è™‘é€é¥<br>
+ã€€ã€€æ¬£å¥ç´¯é£ã€€æˆšè°¢æ¬¢æ‹›ã€€æ¸ è·çš„åŽ†ã€€å›­èŽ½æŠ½æ¡ã€€æž‡æ·æ™šç¿ ã€€æ¢§æ¡èš¤å‡‹<br>
+ã€€ã€€é™ˆæ ¹å§”ç¿³ã€€è½å¶é£˜æ‘‡ã€€æ¸¸â‘¥ç‹¬è¿ã€€å‡Œæ‘©ç»›éœ„ã€€è€½è¯»çŽ©å¸‚ã€€å¯“ç›®å›Šç®±<br>
+ã€€ã€€æ˜“â‘¦æ”¸ç•ã€€å±žè€³åž£å¢™ã€€å…·è†³é¤é¥­ã€€é€‚å£å……è‚ ã€€é¥±é¥«çƒ¹å®°ã€€é¥¥åŽŒç³Ÿç³ <br>
+ã€€ã€€äº²æˆšæ•…æ—§ã€€è€å°‘å¼‚ç²®ã€€å¦¾å¾¡ç»©çººã€€ä¾å·¾å¸·æˆ¿ã€€çº¨æ‰‡åœ†â‘§ã€€é“¶çƒ›ç‚œç…Œ<br>
+ã€€ã€€æ˜¼çœ å¤•å¯ã€€è“ç¬‹è±¡åºŠã€€å¼¦æ­Œé…’å®´ã€€æŽ¥æ¯ä¸¾è§žã€€çŸ«æ‰‹é¡¿è¶³ã€€æ‚¦è±«ä¸”åº·<br>
+ã€€ã€€å«¡åŽå—£ç»­ã€€ç¥­ç¥€â‘¨å°ã€€ç¨½é¢¡å†æ‹œã€€æ‚šæƒ§ææƒ¶ã€€ç¬ºç‰’ç®€è¦ã€€é¡¾ç­”å®¡è¯¦<br>
+ã€€ã€€éª¸åž¢æƒ³æµ´ã€€æ‰§çƒ­æ„¿å‡‰ã€€é©´éª¡çŠŠç‰¹ã€€éª‡è·ƒè¶…éª§ã€€è¯›æ–©è´¼ç›—ã€€æ•èŽ·å›äº¡<br>
+ã€€ã€€å¸ƒå°„åƒšä¸¸ã€€åµ‡ç´é˜®å•¸ã€€æ¬ç¬”ä¼¦çº¸ã€€é’§å·§ä»»é’“ã€€é‡Šçº·åˆ©ä¿—ã€€â‘©çš†ä½³å¦™<br>
+ã€€ã€€æ¯›æ–½æ·‘å§¿ã€€å·¥é¢¦å¦ç¬‘ã€€å¹´çŸ¢æ¯å‚¬ã€€æ›¦æ™–æœ—æ›œã€€ç’‡çŽ‘æ‚¬æ–¡ã€€æ™¦é­„çŽ¯ç…§<br>
+ã€€ã€€æŒ‡è–ªä¿®ç¥œã€€æ°¸ç»¥å‰åŠ­ã€€çŸ©æ­¥å¼•é¢†ã€€ä¿¯ä»°å»Šåº™ã€€æŸå¸¦çŸœåº„ã€€å¾˜å¾Šçž»çœº<br>
+ã€€ã€€å­¤é™‹å¯¡é—»ã€€æ„šè’™ç­‰è¯®ã€€è°“è¯­åŠ©è€…ã€€ç„‰å“‰ä¹Žä¹Ÿ
 <p>
-¡¡¡¡£¨Â¼×ÔÓ÷ÔÀºâÖ÷±à¡¶´«Í³ÃÉÑ§´ÔÊé¡·£º¡¶Ç§×ÖÎÄ¡·£¬ÖÜÒÕµãÐ££¬ÔÀÂ´ÊéÉç£±£¹
-£¸£·Äê£µÔÂ³¤<br>
-¡¡¡¡É³³ö°æ£¬£É£Ó£Â£Î£·¡ª£¸£°£µ£²£°¡ª£°£³£¹¡ª£´£©
+ã€€ã€€ï¼ˆå½•è‡ªå–»å²³è¡¡ä¸»ç¼–ã€Šä¼ ç»Ÿè’™å­¦ä¸›ä¹¦ã€‹ï¼šã€Šåƒå­—æ–‡ã€‹ï¼Œå‘¨è‰ºç‚¹æ ¡ï¼Œå²³éº“ä¹¦ç¤¾ï¼‘ï¼™
+ï¼˜ï¼—å¹´ï¼•æœˆé•¿<br>
+ã€€ã€€æ²™å‡ºç‰ˆï¼Œï¼©ï¼³ï¼¢ï¼®ï¼—â€”ï¼˜ï¼ï¼•ï¼’ï¼â€”ï¼ï¼“ï¼™â€”ï¼”ï¼‰
 <p>
-¡¡¡¡ ¡¾ÖØ×Ö±í¡¿¡¶Ç§×ÖÎÄ¡·ÊµÂ¼¾Å°Ù¾ÅÊ®ËÄ¸öºº×Ö£¬ÖØ×Ö·²Áù£¬ÒÔººÓïÆ´ÒôÎªÐòÁÐ
-ÓÚÏÂ£º
+ã€€ã€€ ã€é‡å­—è¡¨ã€‘ã€Šåƒå­—æ–‡ã€‹å®žå½•ä¹ç™¾ä¹åå››ä¸ªæ±‰å­—ï¼Œé‡å­—å‡¡å…­ï¼Œä»¥æ±‰è¯­æ‹¼éŸ³ä¸ºåºåˆ—
+äºŽä¸‹ï¼š
 <p>
-¡¡¡¡ ¡°·¢¡±£ºÖÜ·¢ÒóÌÀ£»¸Ç´ËÉí·¢¡°¾Þ¡±£º½£ºÅ¾ÞãÚ£»¾ÞÒ°¶´Í¥¡°À¥¡±£ºÓñ³öÀ¥¸Ô£»
-À¥³ØíÙ<br>
-¡¡¡¡Ê¯¡°ÆÝ¡±£ºÆÝÐ»»¶ÕÐ£»Ç×ÆÝ¹Ê¾É¡°ÔÆ¡±£ºÔÆÌÚÖÂÓê£»ìøÖ÷ÔÆÍ¤¡°×Ê¡±£º×Ê¸¸ÊÂ
-¾ý£»Îñ×Ê¼Úð£
+ã€€ã€€ â€œå‘â€ï¼šå‘¨å‘æ®·æ±¤ï¼›ç›–æ­¤èº«å‘â€œå·¨â€ï¼šå‰‘å·å·¨é˜™ï¼›å·¨é‡Žæ´žåº­â€œæ˜†â€ï¼šçŽ‰å‡ºæ˜†å†ˆï¼›
+æ˜†æ± ç¢£<br>
+ã€€ã€€çŸ³â€œæˆšâ€ï¼šæˆšè°¢æ¬¢æ‹›ï¼›äº²æˆšæ•…æ—§â€œäº‘â€ï¼šäº‘è…¾è‡´é›¨ï¼›ç¦…ä¸»äº‘äº­â€œèµ„â€ï¼šèµ„çˆ¶äº‹
+å›ï¼›åŠ¡èµ„ç¨¼ç©‘
 <p>
-¡¡¡¡ ¡¾·Ç¹ú±ê×ÖÒ»ÀÀ±í¡¿£¨ÒôÒå¾Ý¡¶ÏÖ´úººÓï´Êµä¡·£¬ÉÌÎñÓ¡Êé¹ÝÒ»¾Å°ËÈýÄê±±¾©
-µÚ¶þ°æ£»<br>
-¡¡¡¡ÊÍÒåÎ´±ØÇÐºÏÕýÎÄ£©
+ã€€ã€€ ã€éžå›½æ ‡å­—ä¸€è§ˆè¡¨ã€‘ï¼ˆéŸ³ä¹‰æ®ã€ŠçŽ°ä»£æ±‰è¯­è¯å…¸ã€‹ï¼Œå•†åŠ¡å°ä¹¦é¦†ä¸€ä¹å…«ä¸‰å¹´åŒ—äº¬
+ç¬¬äºŒç‰ˆï¼›<br>
+ã€€ã€€é‡Šä¹‰æœªå¿…åˆ‡åˆæ­£æ–‡ï¼‰
 <p>
-¡¡¡¡ ¢Ù¡¾ÙûÇà¡¿¡¼£ñ¨¬£î£ç¡½Á¹¡£¢Ú¡¾Ê¯·¬¡¿¡¼£ð¨¢£î¡½¡°¡«Ïª¡±£¬Ì«¹«Íû´¹µö´¦¡£
-£¨ËïÇ«<br>
-¡¡¡¡Òæ×¢£©¢Û¡°Òå¡±×ÖÎÞ¡°Ø¼¡±¡¼£ù¨¬¡½ÖÎÀí£¬°²¶¨¡£¢Ü¡¾¡üå²¡ýÊÇ¡¿¡¼£ó£è¨ª¡½
-·ÅÖÃ£»´Ë£»ÓÖ<br>
-¡¡¡¡Í¬¡°Êµ¡±¡£¢Ý¡¾ØéÊå¡¿¡¼£ã£è¨´¡½¿ªÊ¼¡£¡¼£ô¨¬¡½Í¬¡°ÙÃ¡±ÓÚ´Ê¡°ÙÃÙÎ¡±¡£¢Þ
-¡¾À¥Äñ¡¿¡¼£ë¨±<br>
-¡¡¡¡£î¡½¡°¡«¼¦¡±£¬¹ÅÊéÉÏÖ¸Ïóº×µÄÒ»ÖÖÄñ¡£¢ß¡¾³µÇõ¡¿¡¼£ù¨®£õ¡½Çá£»¹ÅÊ±Ò»ÖÖ
-Çá±ã³µ¡£¢à<br>
-¡¡¡¡¡¾¡ü·áµ¶¡ýôé¡¿¡¾£ê£é¨¦¡¿¡°½à¡±Ö®ÊéÃæÓï¡£¡¼£ø£é¨¦¡½Á¿¶ÈÎïÌåÖÜÎ§µÄ³¤¶È¡£
-¢á¡¾¡üØ©¡ý<br>
-¡¡¡¡ìá¡¿¡¼£ú£è¨¥£î£ç¡½ÖÚ¶à¡£¢â¡¾Á¢Á¢¡¿¡¼£â¨¬£î£ç¡½¡°²¢¡±ÒìÌå×ÖÖ®Ò»¡£
+ã€€ã€€ â‘ ã€å†«é’ã€‘ã€–ï½‘Ã¬ï½Žï½‡ã€—å‡‰ã€‚â‘¡ã€çŸ³ç•ªã€‘ã€–ï½Ã¡ï½Žã€—â€œï½žæºªâ€ï¼Œå¤ªå…¬æœ›åž‚é’“å¤„ã€‚
+ï¼ˆå­™è°¦<br>
+ã€€ã€€ç›Šæ³¨ï¼‰â‘¢â€œä¹‰â€å­—æ— â€œä¸¶â€ã€–ï½™Ã¬ã€—æ²»ç†ï¼Œå®‰å®šã€‚â‘£ã€â†‘å®€â†“æ˜¯ã€‘ã€–ï½“ï½ˆÃ­ã€—
+æ”¾ç½®ï¼›æ­¤ï¼›åˆ<br>
+ã€€ã€€åŒâ€œå®žâ€ã€‚â‘¤ã€äº»å”ã€‘ã€–ï½ƒï½ˆÃ¹ã€—å¼€å§‹ã€‚ã€–ï½”Ã¬ã€—åŒâ€œå€œâ€äºŽè¯â€œå€œå‚¥â€ã€‚â‘¥
+ã€æ˜†é¸Ÿã€‘ã€–ï½‹Å«<br>
+ã€€ã€€ï½Žã€—â€œï½žé¸¡â€ï¼Œå¤ä¹¦ä¸ŠæŒ‡è±¡é¹¤çš„ä¸€ç§é¸Ÿã€‚â‘¦ã€è½¦é…‹ã€‘ã€–ï½™Ã³ï½•ã€—è½»ï¼›å¤æ—¶ä¸€ç§
+è½»ä¾¿è½¦ã€‚â‘§<br>
+ã€€ã€€ã€â†‘ä¸°åˆ€â†“ç³¸ã€‘ã€ï½Šï½‰Ã©ã€‘â€œæ´â€ä¹‹ä¹¦é¢è¯­ã€‚ã€–ï½˜ï½‰Ã©ã€—é‡åº¦ç‰©ä½“å‘¨å›´çš„é•¿åº¦ã€‚
+â‘¨ã€â†‘ä¸žâ†“<br>
+ã€€ã€€ç¬ã€‘ã€–ï½šï½ˆÄ“ï½Žï½‡ã€—ä¼—å¤šã€‚â‘©ã€ç«‹ç«‹ã€‘ã€–ï½‚Ã¬ï½Žï½‡ã€—â€œå¹¶â€å¼‚ä½“å­—ä¹‹ä¸€ã€‚
 
 
-<hr><a href="0_INDEX.html">»ØÄ¿Â¼</a>
+<hr><a href="0_INDEX.html">å›žç›®å½•</a>
 </BODY></HTML>
