convert to upper case

--- a/ebooks/prose/short_pop/0_INDEX.html
+++ b/ebooks/prose/short_pop/0_INDEX.html
@@ -1,1 +1,103 @@
-0_index.html
+<html><meta http-equiv="Content-Type" content="text/html" charset="gb2312"><BODY BGCOLOR="#FFF4E4">
+<title>Short</title>
+
+<center>
+<h1>散文</h1>
+<hr width="90%">
+<table border=0 width=90%>
+<tr>
+<td><a href="S044.html">茶经</a></td>
+<td><a href="S036.html">长门赋</a></td>
+<td><a href="T002.html">陈情表</a></td>
+<td><a href="S014.html">赤壁赋</a></td>
+</tr>
+<tr>
+<td><a href="T003.html">出师表</a></td>
+<td><a href="S018.html">春夜宴桃李园序</a></td>
+<td><a href="T004.html">大学章句</a></td>
+<td><a href="S003.html">登楼赋</a></td>
+</tr>
+<tr>
+<td><a href="S009.html">吊古战场文</a></td>
+<td><a href="S011.html">读《孟尝君传》</a></td>
+<td><a href="T001.html">爱莲说</a></td>
+<td><a href="S008.html">高洁说</a></td>
+</tr>
+<tr>
+<td><a href="U001.html">公孙龙子</a></td>
+<td><a href="T005.html">归去来辞</a></td>
+<td><a href="S035.html">归田赋</a></td>
+<td><a href="S007.html">寒花葬志</a></td>
+</tr>
+<tr>
+<td><a href="S049.html">汉杂事秘辛</a></td>
+<td><a href="T006.html">黄帝阴符经（节选）</a></td>
+<td><a href="S047.html">黄石公三略</a></td>
+<td><a href="T007.html">《霍小玉传》</a></td>
+</tr>
+<tr>
+<td><a href="S033.html">借竹楼记</a></td>
+<td><a href="S016.html">诫子篇</a></td>
+<td><a href="S046.html">将苑</a></td>
+<td><a href="S043.html">金人铭</a></td>
+</tr>
+<tr>
+<td><a href="S001.html">酒德颂</a></td>
+<td><a href="S005.html">兰亭集序</a></td>
+<td><a href="S004.html">洛神赋</a></td>
+<td><a href="S025.html">陆贾新语</a></td>
+</tr>
+<tr>
+<td><a href="S040.html">明圣二湖</a></td>
+<td><a href="U006.html">千字文</a></td>
+<td><a href="T009.html">棋经十三篇</a></td>
+<td><a href="T011.html">滕王阁序</a></td>
+</tr>
+<tr>
+<td><a href="S037.html">秋兴赋并序</a></td>
+<td><a href="S045.html">司马法</a></td>
+<td><a href="S002.html">思旧赋并序</a></td>
+<td><a href="S017.html">送董生邵南序</a></td>
+</tr>
+<tr>
+<td><a href="T012.html">项羽本纪</a></td>
+<td><a href="S023.html">师说</a></td>
+<td><a href="S024.html">申鉴</a></td>
+<td><a href="S021.html">桃花源记</a></td>
+</tr>
+<tr>
+<td><a href="S028.html">童心说</a></td>
+<td><a href="U005.html">围炉夜话</a></td>
+<td><a href="S048.html">吴子</a></td>
+<td><a href="S013.html">五柳先生传</a></td>
+</tr>
+<tr>
+<td><a href="S041.html">西京杂记</a></td>
+<td><a href="S032.html">《西湖梦寻》自序</a></td>
+<td><a href="S020.html">闲情赋并序</a></td>
+<td><a href="S019.html">小石潭记</a></td>
+</tr>
+<tr>
+<td><a href="S034.html">叙陈正甫会心集</a></td>
+<td><a href="S039.html">养兰说</a></td>
+<td><a href="S006.html">愚公移山</a></td>
+<td><a href="T008.html">与山巨源绝交书 </a></td>
+</tr>
+<tr>
+<td><a href="S029.html">与袁石浦</a></td>
+<td><a href="S031.html">杂说</a></td>
+<td><a href="U003.html">增广贤文(古训)</a></td>
+<td><a href="S015.html">醉翁亭记</a></td>
+</tr>
+<tr>
+<td><a href="U004.html">周易参同契</a></td>
+<td><a href="U002.html">朱子治家格言</a></td>
+
+</tr>
+</table>
+</center>
+<hr width="90%">
+
+</body>
+
+</html>
