--- a/ebooks/popnovel/yushimingyan/ysmy02.html
+++ b/ebooks/popnovel/yushimingyan/ysmy02.html
@@ -393,4 +393,4 @@
 <p>　　一夜欢娱害自身，百年姻眷属他人。
 <br>　　世间用计行奸者，请看当时梁尚宾。
 <p><hr>
-<a href="ysmy03.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="ysmy03.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
