--- a/ebooks/popnovel/yushimingyan/ysmy03.html
+++ b/ebooks/popnovel/yushimingyan/ysmy03.html
@@ -266,4 +266,4 @@
 <p>　　痴心做处人人爱，冷眼观时个个嫌。
 <br>　　觑破关头邪念息，一生出处自安活。
 <p><hr>
-<a href="ysmy04.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="ysmy04.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
