--- a/ebooks/popnovel/yushimingyan/ysmy04.html
+++ b/ebooks/popnovel/yushimingyan/ysmy04.html
@@ -246,4 +246,4 @@
 <p>　　兔演巷中担病害，闲云庵里偿冤债。
 <br>　　周全末路仗贞娘，一床锦被相遮盖。
 <p><hr>
-<a href="ysmy05.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="ysmy05.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
