--- a/ebooks/popnovel/yushimingyan/ysmy05.html
+++ b/ebooks/popnovel/yushimingyan/ysmy05.html
@@ -141,4 +141,4 @@
 一代名臣属酒人，卖缒王媪办奇人。
 时人不具波折眼，枉使明珠混俗尘。
 <p><hr>
-<a href="ysmy06.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="ysmy06.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
