--- a/ebooks/popnovel/yushimingyan/ysmy06.html
+++ b/ebooks/popnovel/yushimingyan/ysmy06.html
@@ -145,4 +145,4 @@
 昌贤轻色古今稀，反怨为恩事更奇。
 试借兖州功薄看，黄金台上有名姬。
 <p><hr>
-<a href="ysmy07.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="ysmy07.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
