--- a/ebooks/popnovel/yushimingyan/ysmy08.html
+++ b/ebooks/popnovel/yushimingyan/ysmy08.html
@@ -219,4 +219,4 @@
 祠”，把吴保安、郭仲翔。里中凡有约誓，都在庙中祷告，香火至今不绝。有诗为证频频握
 手末为亲，临难方知意气真。试看郭吴真义气，原非乎日结交人。
 <p><hr>
-<a href="ysmy09.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="ysmy09.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
