--- a/ebooks/popnovel/yushimingyan/ysmy10.html
+++ b/ebooks/popnovel/yushimingyan/ysmy10.html
@@ -336,4 +336,4 @@
 <br>　　轴中藏字非无意，壁下理金属有间。
 <br>　　何似存些公道好，不生争竟不兴词。
 <p><hr>
-<a href="ysmy11.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="ysmy11.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
