--- a/ebooks/popnovel/yushimingyan/ysmy11.html
+++ b/ebooks/popnovel/yushimingyan/ysmy11.html
@@ -178,4 +178,4 @@
 <p>　　相如持节仍归蜀，季子怀金又过周。
 <br>　　衣锦还乡从古有，何如茶肆遇宸游？
 <p><hr>
-<a href="ysmy12.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="ysmy12.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
