--- a/ebooks/popnovel/yushimingyan/ysmy12.html
+++ b/ebooks/popnovel/yushimingyan/ysmy12.html
@@ -209,4 +209,4 @@
 <p>　　乐游原上妓如云，尽上风流柳七坟。
 <br>　　可笑纷纷绍绅辈，怜才不及众红裙。
 <p><hr>
-<a href="ysmy13.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="ysmy13.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
