--- a/ebooks/popnovel/yushimingyan/ysmy14.html
+++ b/ebooks/popnovel/yushimingyan/ysmy14.html
@@ -159,4 +159,4 @@
 <br>　　五龙蛰法前人少，八卦神机后学求。
 <br>　　片片自云迷峡锁，石床高卧足干秋。
 <p><hr>
-<a href="ysmy15.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="ysmy15.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
