--- a/ebooks/popnovel/yushimingyan/ysmy15.html
+++ b/ebooks/popnovel/yushimingyan/ysmy15.html
@@ -403,4 +403,4 @@
 <p>　　结交须结英与豪，劝君君莫结儿女曹。
 <br>　　英豪际会皆有用，儿女柔脆空烦劳。
 <p><hr>
-<a href="ysmy16.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="ysmy16.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
