--- a/ebooks/popnovel/yushimingyan/ysmy16.html
+++ b/ebooks/popnovel/yushimingyan/ysmy16.html
@@ -127,4 +127,4 @@
 <br>　　月暗灯昏，泪痕如线，死生虽隔情何限。
 <br>　　灵輀若候故人来，黄泉一笑重相见。
 <p><hr>
-<a href="ysmy17.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="ysmy17.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
