--- a/ebooks/popnovel/yushimingyan/ysmy38.html
+++ b/ebooks/popnovel/yushimingyan/ysmy38.html
@@ -306,5 +306,5 @@
 
 <p><hr>
 
-<a href="ysmy39.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="ysmy39.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
