--- a/ebooks/popnovel/yushimingyan/ysmy01.html
+++ b/ebooks/popnovel/yushimingyan/ysmy01.html
@@ -571,4 +571,4 @@
 恩爱夫妻虽到头，妻还作妾亦堪羞。
 殃样果报无虚谬，腿尺青天莫远求。
 <p><hr>
-<a href="ysmy02.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="ysmy02.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
