--- a/ebooks/popnovel/yushimingyan/ysmy07.html
+++ b/ebooks/popnovel/yushimingyan/ysmy07.html
@@ -128,4 +128,4 @@
 古来仁义包天地，只在人心方寸间。
 <br>　　二士庙前秋日净，英魂常伴月光寒。
 <p><hr>
-<a href="ysmy08.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="ysmy08.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
