--- a/ebooks/popnovel/yushimingyan/ysmy09.html
+++ b/ebooks/popnovel/yushimingyan/ysmy09.html
@@ -174,4 +174,4 @@
 无室无官苦莫论，周旋好事赖烘恩。
 人能步步存阴德，福禄绵绵及子孙。
 <p><hr>
-<a href="ysmy10.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="ysmy10.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
