--- a/ebooks/popnovel/yushimingyan/ysmy13.html
+++ b/ebooks/popnovel/yushimingyan/ysmy13.html
@@ -254,4 +254,4 @@
 <p>　　世人开口说神仙，眼见何人上九天？
 <br>　　不是仙家尽虚妄，从来难得道心坚。
 <p><hr>
-<a href="ysmy14.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="ysmy14.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
