--- a/ebooks/popnovel/yushimingyan/ysmy17.html
+++ b/ebooks/popnovel/yushimingyan/ysmy17.html
@@ -176,5 +176,5 @@
 <br>　　仁义还收仁义报，宦途无梗子孙贤。
 <p><hr>
 
-<a href="ysmy18.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="ysmy18.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
