--- a/ebooks/popnovel/yushimingyan/ysmy19.html
+++ b/ebooks/popnovel/yushimingyan/ysmy19.html
@@ -282,5 +282,5 @@
 
 <p><hr>
 
-<a href="ysmy20.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="ysmy20.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
