--- a/ebooks/popnovel/yushimingyan/ysmy21.html
+++ b/ebooks/popnovel/yushimingyan/ysmy21.html
@@ -538,5 +538,5 @@
 
 <p><hr>
 
-<a href="ysmy22.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="ysmy22.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
