--- a/ebooks/popnovel/yushimingyan/ysmy22.html
+++ b/ebooks/popnovel/yushimingyan/ysmy22.html
@@ -512,5 +512,5 @@
 
 <p><hr>
 
-<a href="ysmy23.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="ysmy23.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
