--- a/ebooks/popnovel/yushimingyan/ysmy24.html
+++ b/ebooks/popnovel/yushimingyan/ysmy24.html
@@ -307,5 +307,5 @@
 
 <p><hr>
 
-<a href="ysmy25.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="ysmy25.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
