--- a/ebooks/popnovel/yushimingyan/ysmy27.html
+++ b/ebooks/popnovel/yushimingyan/ysmy27.html
@@ -213,5 +213,5 @@
 
 <p><hr>
 
-<a href="ysmy28.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="ysmy28.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
