--- a/ebooks/popnovel/yushimingyan/ysmy28.html
+++ b/ebooks/popnovel/yushimingyan/ysmy28.html
@@ -202,5 +202,5 @@
 
 <p><hr>
 
-<a href="ysmy29.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="ysmy29.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
