--- a/ebooks/popnovel/yushimingyan/ysmy30.html
+++ b/ebooks/popnovel/yushimingyan/ysmy30.html
@@ -290,5 +290,5 @@
 
 <p><hr>
 
-<a href="ysmy31.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="ysmy31.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
