--- a/ebooks/popnovel/yushimingyan/ysmy31.html
+++ b/ebooks/popnovel/yushimingyan/ysmy31.html
@@ -310,5 +310,5 @@
 
 <p><hr>
 
-<a href="ysmy32.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="ysmy32.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
