--- a/ebooks/popnovel/yushimingyan/ysmy32.html
+++ b/ebooks/popnovel/yushimingyan/ysmy32.html
@@ -218,5 +218,5 @@
 
 <p><hr>
 
-<a href="ysmy33.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="ysmy33.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
