--- a/ebooks/popnovel/yushimingyan/ysmy33.html
+++ b/ebooks/popnovel/yushimingyan/ysmy33.html
@@ -269,5 +269,5 @@
 
 <p><hr>
 
-<a href="ysmy34.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="ysmy34.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
