--- a/ebooks/popnovel/yushimingyan/ysmy34.html
+++ b/ebooks/popnovel/yushimingyan/ysmy34.html
@@ -160,5 +160,5 @@
 
 <p><hr>
 
-<a href="ysmy35.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="ysmy35.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
