--- a/ebooks/popnovel/yushimingyan/ysmy35.html
+++ b/ebooks/popnovel/yushimingyan/ysmy35.html
@@ -240,5 +240,5 @@
 
 <p><hr>
 
-<a href="ysmy36.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="ysmy36.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
