--- a/ebooks/popnovel/yushimingyan/ysmy37.html
+++ b/ebooks/popnovel/yushimingyan/ysmy37.html
@@ -382,5 +382,5 @@
 
 <p><hr>
 
-<a href="ysmy38.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="ysmy38.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
