--- a/ebooks/popnovel/yushimingyan/ysmy39.html
+++ b/ebooks/popnovel/yushimingyan/ysmy39.html
@@ -485,5 +485,5 @@
 
 <p><hr>
 
-<a href="ysmy40.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="ysmy40.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
