--- a/ebooks/popnovel/guanchang/guanchang01.html
+++ b/ebooks/popnovel/guanchang/guanchang01.html
@@ -216,4 +216,4 @@
 曾出过门；王府上可有使唤不着的管家，请赏荐一位，好跟着孙子明年上京会试。”王乡绅
 也应允了。方才大家送出大门，上车而去。欲知后事如何，且听下回分解。
 <p>　　
-<p><hr><a href="guanchang02.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang02.html">下一回</a>　<a href="content.html">回目录</a>
