--- a/ebooks/popnovel/guanchang/guanchang02.html
+++ b/ebooks/popnovel/guanchang/guanchang02.html
@@ -269,4 +269,4 @@
 人之骗，气的一天没有吃饭。欲知后事如何，且听下回分解。
 <p>　　
  
-<p><hr><a href="guanchang03.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang03.html">下一回</a>　<a href="content.html">回目录</a>
