--- a/ebooks/popnovel/guanchang/guanchang03.html
+++ b/ebooks/popnovel/guanchang/guanchang03.html
@@ -260,4 +260,4 @@
 <p>　　①绿呢大轿：一种官阶标志，当时三品以上官员才坐绿呢大轿。
 
  
-<p><hr><a href="guanchang04.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang04.html">下一回</a>　<a href="content.html">回目录</a>
