--- a/ebooks/popnovel/guanchang/guanchang04.html
+++ b/ebooks/popnovel/guanchang/guanchang04.html
@@ -218,4 +218,4 @@
 又奉承了几句话，三荷包方才回去。此事他哥能否应允，且听下回分解。
 
  
-<p><hr><a href="guanchang05.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang05.html">下一回</a>　<a href="content.html">回目录</a>
