--- a/ebooks/popnovel/guanchang/guanchang05.html
+++ b/ebooks/popnovel/guanchang/guanchang05.html
@@ -260,4 +260,4 @@
 拍一跳。究竟如何发付蒋福，与那蒋福肯干休与否，且听下回分解。
 
  
-<p><hr><a href="guanchang06.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang06.html">下一回</a>　<a href="content.html">回目录</a>
