--- a/ebooks/popnovel/guanchang/guanchang06.html
+++ b/ebooks/popnovel/guanchang/guanchang06.html
@@ -258,4 +258,4 @@
 <p>　　①都司：清朝为绿营军官。
 <p>　　
  
-<p><hr><a href="guanchang07.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang07.html">下一回</a>　<a href="content.html">回目录</a>
