--- a/ebooks/popnovel/guanchang/guanchang07.html
+++ b/ebooks/popnovel/guanchang/guanchang07.html
@@ -256,4 +256,4 @@
 <p>　　①康白度：买办，英语译音。
 
  
-<p><hr><a href="guanchang08.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang08.html">下一回</a>　<a href="content.html">回目录</a>
