--- a/ebooks/popnovel/guanchang/guanchang08.html
+++ b/ebooks/popnovel/guanchang/guanchang08.html
@@ -260,4 +260,4 @@
 子尧看了，这一惊竟非同小可！欲知电中所言何事，且听下回分解。
 
  
-<p><hr><a href="guanchang09.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang09.html">下一回</a>　<a href="content.html">回目录</a>
