--- a/ebooks/popnovel/guanchang/guanchang13.html
+++ b/ebooks/popnovel/guanchang/guanchang13.html
@@ -304,4 +304,4 @@
 制，锁入空房。谁知次日一早推门，这一吓非同小可！欲知后事如何，且听下回分解。
 <p>　　
  
-<p><hr><a href="guanchang14.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang14.html">下一回</a>　<a href="content.html">回目录</a>
