--- a/ebooks/popnovel/guanchang/guanchang14.html
+++ b/ebooks/popnovel/guanchang/guanchang14.html
@@ -312,4 +312,4 @@
 听得耳舱里胡统领一连咳嗽了几声，龙珠立刻赶着进去。欲么后事如何，且听下回分解。
 <p>　　
  
-<p><hr><a href="guanchang15.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang15.html">下一回</a>　<a href="content.html">回目录</a>
