--- a/ebooks/popnovel/guanchang/guanchang15.html
+++ b/ebooks/popnovel/guanchang/guanchang15.html
@@ -314,4 +314,4 @@
 小罪名，将他赶去，这都是老公事的作用。要知以后如何，且听下回分解。
 
  
-<p><hr><a href="guanchang16.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang16.html">下一回</a>　<a href="content.html">回目录</a>
