--- a/ebooks/popnovel/guanchang/guanchang16.html
+++ b/ebooks/popnovel/guanchang/guanchang16.html
@@ -281,4 +281,4 @@
 周老爷冷淡下来，不如先前的信任了。欲知后事如何，且听下回分解。
 
  
-<p><hr><a href="guanchang17.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang17.html">下一回</a>　<a href="content.html">回目录</a>
