--- a/ebooks/popnovel/guanchang/guanchang21.html
+++ b/ebooks/popnovel/guanchang/guanchang21.html
@@ -306,4 +306,4 @@
 烟会保住，依旧做他的卖买。都是后话不题。要知官场上又出甚么新鲜事情，且听下回分解。
 <p>　　
  
-<p><hr><a href="guanchang22.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang22.html">下一回</a>　<a href="content.html">回目录</a>
