--- a/ebooks/popnovel/guanchang/guanchang22.html
+++ b/ebooks/popnovel/guanchang/guanchang22.html
@@ -271,4 +271,4 @@
 <p>　　
  
  
-<p><hr><a href="guanchang23.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang23.html">下一回</a>　<a href="content.html">回目录</a>
