--- a/ebooks/popnovel/guanchang/guanchang24.html
+++ b/ebooks/popnovel/guanchang/guanchang24.html
@@ -353,4 +353,4 @@
 人之约，并后来曾否再去访那姑子，且听三续书中分解。
 
  
-<p><hr><a href="guanchang25.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang25.html">下一回</a>　<a href="content.html">回目录</a>
