--- a/ebooks/popnovel/guanchang/guanchang29.html
+++ b/ebooks/popnovel/guanchang/guanchang29.html
@@ -303,4 +303,4 @@
 分解。
 
  
-<p><hr><a href="guanchang30.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang30.html">下一回</a>　<a href="content.html">回目录</a>
