--- a/ebooks/popnovel/guanchang/guanchang35.html
+++ b/ebooks/popnovel/guanchang/guanchang35.html
@@ -282,4 +282,4 @@
 等到回寓，已经同死人一样了。以后如何，且听下回分解。
 <p>　　
  
-<p><hr><a href="guanchang36.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang36.html">下一回</a>　<a href="content.html">回目录</a>
