--- a/ebooks/popnovel/guanchang/guanchang37.html
+++ b/ebooks/popnovel/guanchang/guanchang37.html
@@ -255,4 +255,4 @@
 他一万多银子，才把这事过去。以后还有何事，且听下回分解。
 
  
-<p><hr><a href="guanchang38.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang38.html">下一回</a>　<a href="content.html">回目录</a>
