--- a/ebooks/popnovel/guanchang/guanchang43.html
+++ b/ebooks/popnovel/guanchang/guanchang43.html
@@ -290,4 +290,4 @@
 一个趔趄，站脚不稳，躺下了。欲知后事如何，且听下回分解。
 
  
-<p><hr><a href="guanchang44.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang44.html">下一回</a>　<a href="content.html">回目录</a>
