--- a/ebooks/popnovel/guanchang/guanchang46.html
+++ b/ebooks/popnovel/guanchang/guanchang46.html
@@ -305,4 +305,4 @@
 趟差使弄来的钱，足足有八九成到他儿子手里了。要知后事如何，且听下回分解。
 
  
-<p><hr><a href="guanchang47.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang47.html">下一回</a>　<a href="content.html">回目录</a>
