--- a/ebooks/popnovel/guanchang/guanchang47.html
+++ b/ebooks/popnovel/guanchang/guanchang47.html
@@ -237,4 +237,4 @@
 数语，或是让人家随便旁边椅上坐坐。人家见了，都为诧异。要知后事如何，且听下回分解。
 
  
-<p><hr><a href="guanchang48.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang48.html">下一回</a>　<a href="content.html">回目录</a>
