--- a/ebooks/popnovel/guanchang/guanchang50.html
+++ b/ebooks/popnovel/guanchang/guanchang50.html
@@ -370,4 +370,4 @@
 娘舅不要同他急了，为的就是这个。”欲知众人听了心上如何，且听下回分解。
 <p>　　
  
-<p><hr><a href="guanchang51.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang51.html">下一回</a>　<a href="content.html">回目录</a>
