--- a/ebooks/popnovel/guanchang/guanchang55.html
+++ b/ebooks/popnovel/guanchang/guanchang55.html
@@ -376,4 +376,4 @@
 小！究竟事情成否不得而知，禁不住心上毕卜毕卜跳个不住。欲知后事如何，且听下回分解。
 <p>　　
  
-<p><hr><a href="guanchang56.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang56.html">下一回</a>　<a href="content.html">回目录</a>
