--- a/ebooks/popnovel/guanchang/guanchang57.html
+++ b/ebooks/popnovel/guanchang/guanchang57.html
@@ -269,4 +269,4 @@
 总理衙门又驳出一番交涉来。要知后来如何，且听下回分解。
 
  
-<p><hr><a href="guanchang58.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang58.html">下一回</a>　<a href="content.html">回目录</a>
