--- a/ebooks/popnovel/guanchang/guanchang09.html
+++ b/ebooks/popnovel/guanchang/guanchang09.html
@@ -245,4 +245,4 @@
 可！欲知后事如何，且听下回分解。
 
  
-<p><hr><a href="guanchang10.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang10.html">下一回</a>　<a href="content.html">回目录</a>
