--- a/ebooks/popnovel/guanchang/guanchang10.html
+++ b/ebooks/popnovel/guanchang/guanchang10.html
@@ -265,4 +265,4 @@
 <p>　　①海青：宽袍长袖的衣服。
 
  
-<p><hr><a href="guanchang11.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang11.html">下一回</a>　<a href="content.html">回目录</a>
