--- a/ebooks/popnovel/guanchang/guanchang11.html
+++ b/ebooks/popnovel/guanchang/guanchang11.html
@@ -297,4 +297,4 @@
 解。
 
  
-<p><hr><a href="guanchang12.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang12.html">下一回</a>　<a href="content.html">回目录</a>
