--- a/ebooks/popnovel/guanchang/guanchang12.html
+++ b/ebooks/popnovel/guanchang/guanchang12.html
@@ -260,4 +260,4 @@
 周老爷、赵不了统通有分在内。要知端的，且听续编分解。
 
  
-<p><hr><a href="guanchang13.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang13.html">下一回</a>　<a href="content.html">回目录</a>
