--- a/ebooks/popnovel/guanchang/guanchang17.html
+++ b/ebooks/popnovel/guanchang/guanchang17.html
@@ -336,4 +336,4 @@
 得五十银子给他表弟，托他奏参出去。以后如何，且听下回分解。
 <p>　　
  
-<p><hr><a href="guanchang18.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang18.html">下一回</a>　<a href="content.html">回目录</a>
