--- a/ebooks/popnovel/guanchang/guanchang18.html
+++ b/ebooks/popnovel/guanchang/guanchang18.html
@@ -344,4 +344,4 @@
 解。
 
  
-<p><hr><a href="guanchang19.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang19.html">下一回</a>　<a href="content.html">回目录</a>
