--- a/ebooks/popnovel/guanchang/guanchang19.html
+++ b/ebooks/popnovel/guanchang/guanchang19.html
@@ -295,4 +295,4 @@
 旧衣掌上院禀见。欲知此番署院见面后如何情形，且听下回分解。
 
  
-<p><hr><a href="guanchang20.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang20.html">下一回</a>　<a href="content.html">回目录</a>
