--- a/ebooks/popnovel/guanchang/guanchang20.html
+++ b/ebooks/popnovel/guanchang/guanchang20.html
@@ -266,4 +266,4 @@
 刘大侉子此番能否把烟戒去，且听下回分解。
 
  
-<p><hr><a href="guanchang21.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang21.html">下一回</a>　<a href="content.html">回目录</a>
