--- a/ebooks/popnovel/guanchang/guanchang23.html
+++ b/ebooks/popnovel/guanchang/guanchang23.html
@@ -305,4 +305,4 @@
 辕禀见谢委。欲知后事如何，且听下回分解。
 
  
-<p><hr><a href="guanchang24.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang24.html">下一回</a>　<a href="content.html">回目录</a>
