--- a/ebooks/popnovel/guanchang/guanchang25.html
+++ b/ebooks/popnovel/guanchang/guanchang25.html
@@ -288,4 +288,4 @@
 <p>　　你道这人是谁？且听下回分解。
 
  
-<p><hr><a href="guanchang26.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang26.html">下一回</a>　<a href="content.html">回目录</a>
