--- a/ebooks/popnovel/guanchang/guanchang26.html
+++ b/ebooks/popnovel/guanchang/guanchang26.html
@@ -247,4 +247,4 @@
 <p>　　要知后事如何，且听下回分解。
 
  
-<p><hr><a href="guanchang27.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang27.html">下一回</a>　<a href="content.html">回目录</a>
