--- a/ebooks/popnovel/guanchang/guanchang27.html
+++ b/ebooks/popnovel/guanchang/guanchang27.html
@@ -243,4 +243,4 @@
 才答应，相辞回去。欲知后事如何，且听下回分解。
 
  
-<p><hr><a href="guanchang28.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang28.html">下一回</a>　<a href="content.html">回目录</a>
