--- a/ebooks/popnovel/guanchang/guanchang28.html
+++ b/ebooks/popnovel/guanchang/guanchang28.html
@@ -334,4 +334,4 @@
 正是当京官的苦处。要知后事如何，且听下回分解。
 
  
-<p><hr><a href="guanchang29.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang29.html">下一回</a>　<a href="content.html">回目录</a>
