--- a/ebooks/popnovel/guanchang/guanchang30.html
+++ b/ebooks/popnovel/guanchang/guanchang30.html
@@ -377,4 +377,4 @@
 回分解。
 
  
-<p><hr><a href="guanchang31.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang31.html">下一回</a>　<a href="content.html">回目录</a>
