--- a/ebooks/popnovel/guanchang/guanchang32.html
+++ b/ebooks/popnovel/guanchang/guanchang32.html
@@ -317,4 +317,4 @@
 孙大胡子指驳了一句，余荩臣方始顿口无言。欲知孙大胡子说的何话，且听下回分解。
 <p>　　
  
-<p><hr><a href="guanchang33.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang33.html">下一回</a>　<a href="content.html">回目录</a>
