--- a/ebooks/popnovel/guanchang/guanchang33.html
+++ b/ebooks/popnovel/guanchang/guanchang33.html
@@ -362,4 +362,4 @@
 知后事如何，且听下回分解。
 
  
-<p><hr><a href="guanchang34.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang34.html">下一回</a>　<a href="content.html">回目录</a>
