--- a/ebooks/popnovel/guanchang/guanchang34.html
+++ b/ebooks/popnovel/guanchang/guanchang34.html
@@ -327,4 +327,4 @@
 台一个札子，折阅之下，这一急非同小可！要知所为何事，且听下回分解。
 
  
-<p><hr><a href="guanchang35.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang35.html">下一回</a>　<a href="content.html">回目录</a>
