--- a/ebooks/popnovel/guanchang/guanchang36.html
+++ b/ebooks/popnovel/guanchang/guanchang36.html
@@ -352,4 +352,4 @@
 要知所为之事，且听下回分解。
 
  
-<p><hr><a href="guanchang37.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang37.html">下一回</a>　<a href="content.html">回目录</a>
