--- a/ebooks/popnovel/guanchang/guanchang39.html
+++ b/ebooks/popnovel/guanchang/guanchang39.html
@@ -254,4 +254,4 @@
 知此去如何，且听下回分解。
 
  
-<p><hr><a href="guanchang40.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang40.html">下一回</a>　<a href="content.html">回目录</a>
