--- a/ebooks/popnovel/guanchang/guanchang40.html
+++ b/ebooks/popnovel/guanchang/guanchang40.html
@@ -308,4 +308,4 @@
 任才好。于是这话传到王柏臣耳朵里，便把他急的了不得。要知后事如何，且听下回分解。
 <p>　　
  
-<p><hr><a href="guanchang41.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang41.html">下一回</a>　<a href="content.html">回目录</a>
