--- a/ebooks/popnovel/guanchang/guanchang45.html
+++ b/ebooks/popnovel/guanchang/guanchang45.html
@@ -350,4 +350,4 @@
 例交卸，自行回府销差，这事也就完了。要知后事如何，且听下回分解。
 <p>　　
  
-<p><hr><a href="guanchang46.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang46.html">下一回</a>　<a href="content.html">回目录</a>
