--- a/ebooks/popnovel/guanchang/guanchang48.html
+++ b/ebooks/popnovel/guanchang/guanchang48.html
@@ -334,4 +334,4 @@
 解。
 
  
-<p><hr><a href="guanchang49.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang49.html">下一回</a>　<a href="content.html">回目录</a>
