--- a/ebooks/popnovel/guanchang/guanchang49.html
+++ b/ebooks/popnovel/guanchang/guanchang49.html
@@ -333,4 +333,4 @@
 的，十八位之中倒有一十五位。欲知后事如何，且听下回分解。
 <p>　　
  
-<p><hr><a href="guanchang50.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang50.html">下一回</a>　<a href="content.html">回目录</a>
