--- a/ebooks/popnovel/guanchang/guanchang51.html
+++ b/ebooks/popnovel/guanchang/guanchang51.html
@@ -367,4 +367,4 @@
 门之子，而且异常看重，自然别人更无话说了。要知后事如何，且听下回分解。
 
  
-<p><hr><a href="guanchang52.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang52.html">下一回</a>　<a href="content.html">回目录</a>
