--- a/ebooks/popnovel/guanchang/guanchang52.html
+++ b/ebooks/popnovel/guanchang/guanchang52.html
@@ -337,4 +337,4 @@
 在那里指手划脚，自己称扬自己哩。要知后事如何，且听下回分解。
 
  
-<p><hr><a href="guanchang53.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang53.html">下一回</a>　<a href="content.html">回目录</a>
