--- a/ebooks/popnovel/guanchang/guanchang53.html
+++ b/ebooks/popnovel/guanchang/guanchang53.html
@@ -310,4 +310,4 @@
 解。
 
  
-<p><hr><a href="guanchang54.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang54.html">下一回</a>　<a href="content.html">回目录</a>
