--- a/ebooks/popnovel/guanchang/guanchang54.html
+++ b/ebooks/popnovel/guanchang/guanchang54.html
@@ -278,4 +278,4 @@
 何，且听下回分解。
 
  
-<p><hr><a href="guanchang55.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang55.html">下一回</a>　<a href="content.html">回目录</a>
