--- a/ebooks/popnovel/guanchang/guanchang56.html
+++ b/ebooks/popnovel/guanchang/guanchang56.html
@@ -437,4 +437,4 @@
 提了。欲知后事如何，且听下回分解。
 
  
-<p><hr><a href="guanchang57.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang57.html">下一回</a>　<a href="content.html">回目录</a>
