--- a/ebooks/popnovel/guanchang/guanchang58.html
+++ b/ebooks/popnovel/guanchang/guanchang58.html
@@ -341,4 +341,4 @@
 <p>　　②阁学：即内阁学士。
 
  
-<p><hr><a href="guanchang59.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang59.html">下一回</a>　<a href="content.html">回目录</a>
