--- a/ebooks/popnovel/guanchang/guanchang59.html
+++ b/ebooks/popnovel/guanchang/guanchang59.html
@@ -268,4 +268,4 @@
 来，他的腰包里亦就满了。要知后事如何，且听下回分解。
 
  
-<p><hr><a href="guanchang60.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="guanchang60.html">下一回</a>　<a href="content.html">回目录</a>
